--- a/Java/Basic/4. Variable.md
+++ b/Java/Basic/4. Variable.md
@@ -192,7 +192,7 @@ IEEE(국제표준) 754 부동소수점 표현 방식에 따른 실수 표현
 - float 
   - 양수이므로 부호비트는 0
   - 절대값을 이진법으로 나타내면 `1101.11`
-  - 소수점을 이동 시켜서 왼쪽에 1만 남기면, $ 1101.11 = 1.10111 * 2^3 $ 정규화된 부동소수점이 만들어짐
+  - 소수점을 이동 시켜서 왼쪽에 1만 남기면, 1101.11 = 1.10111 * 2^3 정규화된 부동소수점이 만들어짐
   - 가수부는 소수점 기준으로 오른쪽으로 10111000000000000000000 (23bit)
   - 지수는 3이므로 Bias와 더한다. 32비트 IEEE 754 형식에서의 Bias는 127이라서 3+127 = 130이 된다. 지수부는 10000010이 된다.
 
@@ -203,7 +203,7 @@ IEEE(국제표준) 754 부동소수점 표현 방식에 따른 실수 표현
  - double
    - 양수이므로 부호비트는 0
    - 절대값을 이진법으로 나타내면 `1101.11`
-   - 소수점을 이동 시켜서 왼쪽에 1만 남기면, $ 1101.11 = 1.10111 * 2^3 $ 정규화된 부동소수점이 만들어짐
+   - 소수점을 이동 시켜서 왼쪽에 1만 남기면, 1101.11 = 1.10111 * 2^3 정규화된 부동소수점이 만들어짐
    - 가수부는 소수점 기준으로 오른쪽으로 10111000000000000000000 ... 0 (52bit)
    - 지수는 3이므로 Bias와 더한다. 64비트 IEE 754 형식에서의 Bias는 1023이라서 3+1023 = 1026이 된다. 지수부는 10000000010이 된다.
 
