[JAVA] Variable 수정

--- a/Java/Basic/4. Variable.md
+++ b/Java/Basic/4. Variable.md
@@ -163,11 +163,11 @@ int x7 = 0x52_;
 
 | 타입 |     최소     |      최대      |
 |------|-------------|----------------|
-|byte  | $ -2^7 $    | $ -2^7-1 $     |
-|short | $ -2^{15} $ | $ -2^{15}-1 $  |
-|int   | $ -2^{31} $ | $ -2^{31}-1 $  |
-|long  | $ -2^{63} $ | $ -2^{63}-1 $  |
-|char  | 0           | $ -2^{16}-1 $  |
+|byte  |    -2^7     |     -2^7-1     |
+|short |    -2^15    |     -2^15-1    |
+|int   |    -2^31    |     -2^31-1    |
+|long  |    -2^63    |     -2^63-1    |
+|char  | 0           |     -2^16-1    |
 
 ### 8비트 byte 타입
 
