[JAVA] Variable 기본자료형 범위 표 수정

--- a/Java/Basic/4. Variable.md
+++ b/Java/Basic/4. Variable.md
@@ -1,5 +1,8 @@
 # Variable
 
+- 고정된 데이터가 아닌 항상 변할 수 있는 가능성을 두고 있다.
+- 변수의 종류에 따라 메모리에서 할당되는 곳은 달라질 수 있다.
+
 ## Convention 
 첫 문자는 `알파벳`, `유니코드`, `$`, `_`만 올 수 있지만, 보통 `$`, `_`로 시작하지 않는다. 두 번째 문자부터 는 아무거나 사용할 수 있다.
 
@@ -163,11 +166,11 @@ int x7 = 0x52_;
 
 | 타입 |     최소     |      최대      |
 |------|-------------|----------------|
-|byte  |    -2^7     |     -2^7-1     |
-|short |    -2^15    |     -2^15-1    |
-|int   |    -2^31    |     -2^31-1    |
-|long  |    -2^63    |     -2^63-1    |
-|char  | 0           |     -2^16-1    |
+|byte  |    -2^7     |     2^7-1     |
+|short |    -2^15    |     2^15-1    |
+|int   |    -2^31    |     2^31-1    |
+|long  |    -2^63    |     2^63-1    |
+|char  | 0           |     2^16-1    |
 
 ### 8비트 byte 타입
 
