[JAVA] 클래스 객체 보강, 참조자료형 추가, 예제, 실습파일 추가

--- a/Java/Basic/1. Class Method.md
+++ b/Java/Basic/1. Class Method.md
@@ -1,6 +1,4 @@
-# 자바 프로그래밍
-
-## 클래스 
+# 클래스 
 
 실세계에서 공통적 사물이나 추상적인 것을 공통적으로 표현한 것이다.
 상태(state)와 행동(behavior)을 가지지만 필수일 필요는 없다.
@@ -15,18 +13,90 @@
 
 main 함수가 필요하며 단지 자전거의 설계도면만 만들어놨다고 할 수 있으며 객체를 생성하고 사용하는 책임은 다른 클래스에 속한다.
 
+# 생성자
 
-## 메소드
+생성자의 이름은 클래스의 이름과 동일하게 생겼다. 생성자의 개수에 제한은 없다.
 
-클래스 내에서 만들어지며 클래스의 행동을 나타낸다.
+생성자의 생성조건은 필수는 아니지만, 만드는 습관을 가지는 것이 좋다.
+
+기본 생성자를 만들지 않고 매개변수가 있는 생성자를 만들면 기본 생성자를 사용해서 객체를 생성할 수 없고, 생성 시, 컴파일 에러가 발생하므로 매개변수가 있는 생성자를 만들 때, 기본 생성자를 같이 만들어주도록 한다.
+
+# 메소드
+
+클래스 내에서 만들어지며 클래스의 행동 및 행위를 나타낸다.
+
+## 메소드가 종료되는 조건
+  - 모든 문장이 실행
+  - return 예약어 도달
+  - 예외가 발생
+
+## 오버로딩
+
+같은 역할을 하는 메소드에 함수 이름은 같게하고 매개변수의 타입에 변화를 주어서 사용할 수 있도록 하는 방식
+
+## static 메소드와 일반 메소드
+
+`static` 메소드는 객체를 생성하지 않아도 메소드를 호출 할 수 있지만 클래스 변수에만 사용될 수 있다.
+
+`this`를 사용할 수 없다.
 
 ```java
 public class DorLockManager {
     String currentPassword; // 상태
+
+    public void DorLockManager() { } // 기본 생성자
+
     public boolean checkPassword(String Password) { // 행동
         // 생략
     }
 
-    //생략
+    // 오버로딩
+    public void print(int data) {
+
+    }
+
+    // 오버로딩
+    public void print(String data) {
+
+    }
+
+    // 오버로딩
+    public void print(int intData, String StringData) {
+
+    }
 }
 ```
+## static 블록
+
+클래스 내부에만 존재하며, 객체가 생성되기 전에 호출되며 그 이후엔 호출할 수 없다.
+
+```java
+static {
+    // 딱 한 번만 수행
+}
+```
+
+# this
+
+그대로 "이 객체"를 의미한다.
+
+```java
+public class MemberDTO {
+    public String name;
+    public String phone;
+    public String eamil;
+
+    public MemberDTO() {
+        this("geol");
+    }
+
+    public MemberDTO(String name) {
+        this.name = name;
+    }
+}
+```
+
+`MemberDTO` 생성자 내부의 `this.name`은 인스턴스 변수의 `name`
+
+`MemberDTO` 생성자 내부의 `name`은 매개 변수의 `name`
+
