--- a/Java/Basic/2. Environment.md
+++ b/Java/Basic/2. Environment.md
@@ -12,6 +12,8 @@
   - JDK(자바 개발 도구) : JRE + 개발에 필요한 실행파일 (javac.exe)
   - JRE(자바 실행 환경) : JVM + 클래스 라이브러리 (java API)
 
+JDK 는 JRE 에 속해있으며, JRE 는 JVM 에 속해있다.
+
 ## JVM (자바 가상 머신)
   - 운영체제에 관계없이 자바를 구동할 수 있는 가상환경을 제공
 
