--- a/Java/Basic/3. Object.md
+++ b/Java/Basic/3. Object.md
@@ -41,8 +41,8 @@ class Profile {
     }
 
     public static void main(String[] args) {
-        Profile profile = new Profile();
-        profile.setName("Min");
+        Profile profile = new Profile(); // 객체를 생성
+        profile.setName("Min");          // 객체의 행위를 불러옴
         profile.setAge(20);
 
         profile.printName();
@@ -59,3 +59,11 @@ class Profile {
 My name is Min
 My age is 20
 ```
+
+## 가비지 콜렉터
+
+JRE 는 객체가 더 이상 사용되지 않는다고 판단되면 객체를 삭제해준다. 
+
+일부 C++ 같은 언어에서는 생성한 모든 객체를 추적하고 사용하지 않을 때, 명시적으로 폐기해야 한다.
+
+가비지 수집기는 시간에 따라 자동으로 판단되어 수행된다고 한다.
