[JAVA] Environment LTS 추가

--- a/Java/Basic/2. Environment.md
+++ b/Java/Basic/2. Environment.md
@@ -20,6 +20,11 @@
 ## API (Application Programming Interface)
   - 컴퓨터나 프로그램 사이의 연결
 
+## LTS (Long Term Support)*
+  - 장기간 지원해주는 플랫폼을 의미
+  - 컴퓨터 소프트웨어의 제품 생명주기 관리 정책
+  - 소프트웨어 업데이트 (패치)의 유형과 빈도를 변경하여 소프트웨어 배포의 위험부담, 비용 및 급작스런 중단을 줄이면서 소프트웨어의 신뢰성을 향상
+
 ## 간단한 프로그램 작성으로 컴파일 이해하기
   1. Profile.java 작성
 
@@ -37,3 +42,7 @@
   4. `java Profile` 입력 후, 출력되는 문자들을 확인
 
   - 리턴 타입, 함수 이름, 함수 내용은 반드시 필요하다.
+
+-----
+
+- [LTS](https://ko.wikipedia.org/wiki/%EC%9E%A5%EA%B8%B0_%EC%A7%80%EC%9B%90_%EB%B2%84%EC%A0%84)
