[JAVA] 상속 및 패키지 추가

--- a/Java/Basic/2. Environment.md
+++ b/Java/Basic/2. Environment.md
@@ -45,6 +45,9 @@ JDK 는 JRE 에 속해있으며, JRE 는 JVM 에 속해있다.
 
   - 리턴 타입, 함수 이름, 함수 내용은 반드시 필요하다.
 
+
+각 예제로 작성된 파일을 실행하려면 해당 폴더를 프로젝트로 열어서 `cmd`를 이용해서 확인한다.
+
 -----
 
 - [LTS](https://ko.wikipedia.org/wiki/%EC%9E%A5%EA%B8%B0_%EC%A7%80%EC%9B%90_%EB%B2%84%EC%A0%84)
