--- a/Java/Basic/1. Class Method.md
+++ b/Java/Basic/1. Class Method.md
@@ -100,3 +100,57 @@ public class MemberDTO {
 
 `MemberDTO` 생성자 내부의 `name`은 매개 변수의 `name`
 
+# Package
+
+클래스 및 인터페이스 집합을 구성하는 네임스페이스
+
+| 패키지 시작 이름 |                  내용            |
+|--------------|---------------------------------|
+| java         | 자바 기본 패키지                    |
+| javax        | 자바 확장 패키지                    |
+| org          | 일반적으로 비 영리단체(오픈소스)의 패키지 |
+| com          | 일반적으로 영리단체(회사)의 패키지       |
+
+패키지 이름은 소문자
+
+```java
+
+// /sub 폴더 하위에 존재
+public class Sub() {
+    public Sub() {
+
+    }
+
+    public void subClassMethod() {
+
+    }
+}
+```
+
+```java
+import sub.Sub;
+
+public class Main {
+    public static void main(String[] args) {
+
+    }
+}
+```
+
+# 접근 제어자
+
+- public
+  - 누구나 접근할 수 있도록 할 때 사용
+
+- protected
+  - 같은 패키지 내에 있거나 상속받은 경우에만 접근할 수 있다.
+
+- package-private
+  - 같은 패키지 내에 있을 떄만 접근할 수 있다. 아무것도 안적어주면 해당 키워드이다.
+
+- private
+  - 해당 클래스 내에서만 접근 가능하다.
+
+## 클래스 접근 제어자
+
+`public`으로 선언된 클래스가 소스 내에 있다면, 그 파일 이름은 `public`인 클래스 이름과 동일해야 한다.
