--- a/Java/Basic/9. Inheritance.md
+++ b/Java/Basic/9. Inheritance.md
@@ -146,6 +146,6 @@ Dog Constructor
 dog gray wolf 4 60 false
 ```
 
-javac Animal.java Dog.java Cat.java Main.java
+- `javac Animal.java Dog.java Cat.java Main.java`
 
-java Main.java
+- `java Main.java`
