--- a/Java/Basic/2. Environment.md
+++ b/Java/Basic/2. Environment.md
@@ -1,7 +1,7 @@
 # Environment
   - javac.exe : 자바 컴파일러, 자바소스코드(.java)를 바이트코드(.class)로 컴파일.
   - java.exe : 자바 인터프리터, 컴파일러가 생성한 바이트코드를 해석하고 실행.
-  - javap.exe : 역어셈블러, 컴파일된 클래스파일을 원래의 소스로 변환.
+  - javap.exe : 역어셈블러, 컴파일된 클래스파일을 원래의 소스로 변환. (클래스가 어떻게 선언되어 있는지 확인할 수 있는 명령어)
 
   - javadoc.exe : 자동문서생성기, 소스파일에 있는 주석을 이용하여 java API 문서과 같은 형식의 문서를 자동으로 생성한다.
   - jar.exe : 압축 프로그램, 클래스파일과 프로그램의 실행에 관련된 파일을 하나의 jar파일로 압축하거나 압축해제한다.
