[JAVA] java.lang.Object 수정

--- a/Java/Basic/9. Inheritance.md
+++ b/Java/Basic/9. Inheritance.md
@@ -16,7 +16,7 @@
 
 ## 표현
 
-<img src="./images/Inheritance-1.png" width="150">
+<img src="https://github.com/Geol2/Today-I-Learned/blob/main/Java/images/Inheritance-1.png" width="150">
 
 ## 메소드 오버라이딩
 
