--- a/Java/Basic/10. Abstract, Implement, Enum.md
+++ b/Java/Basic/10. Abstract, Implement, Enum.md
@@ -33,13 +33,21 @@ public class MemberManagerImpl implements MemberManager {
 }
 ```
 
+## 인터페이스를 고려해야 할 때
+
+해당 클래스의 동작을 구현한 사람에 대해서 관심이 없는 경우
+
+관련 없는 클래스가 인터페이스를 구현할 것이라고 예상될 경우
+
+다중 상속을 활용하려고 하는 경우
+
 # 추상 클래스
 
-클래스를 만들기엔 애매하고 어떤 메소드는 기능을 만들어 놓아도 문제가 없는 경우에 쓰면 되는 기능
+클래스를 만들기엔 애매하고 어떤 메소드는 기능을 만들어 놓아도 문제가 없는 경우에 쓰면 클래스
 
 class 키워드 앞에 abstract를 사용한다.
 
-메서드를 선언을 해놓아도 되고 구현을 해놓아도 된다.
+메서드만 선언을 해놓아도 되고 메서드에 대한 구현을 해놓아도 된다.
 
 
 ```java
@@ -65,6 +73,16 @@ public class MemberManagerImpl2 extends MemberManagerAbstract {
 }
 ```
 
+## 추상클래스를 고려해야 하는 경우
+
+non-static, non-final 인 인스턴스 변수를 선언해서 자신이 속한 개체의 상태에 액세스하고 수정할 수 있는 메서드를 정의
+
+밀접하게 관련된 여러 클래스 간에 코드를 공유해야 할 때
+
+추상 클래스를 상속하는 클래스에는 `public` 이외의 접근 제어자가 필요해야 할 때
+
+# 테이블
+
 |                           | 인터페이스 |   추상 클래스   | 클래스 |
 |---------------------------|-----------|----------------|--------|
 | 선언 시 사용하는 예약어     | interface | abstract class | class  |
@@ -74,6 +92,7 @@ public class MemberManagerImpl2 extends MemberManagerAbstract {
 | final 메소드 선언 가능     | 불가       | 가능           | 가능    |
 | 상속(extends) 가능         | 불가       | 가능           | 가능   |
 | 구현(implments) 가능       | 가능       | 불가           | 불가   |
+
 
 # final
 
