블로그 내용 읆기기

--- a/Java/Basic/11. Exception.md
+++ b/Java/Basic/11. Exception.md
@@ -68,3 +68,32 @@ public class MyException extends Exception {
 }
 ```
 
+`Exception`을 상속받은 `MyException` 이 있다.
+
+해당 예외를 던지는 `main` 메서드에 try-catch로 묶어야 한다는 단점이 있다.
+
+RuntimeException 을 확장하여 선언하면 try-catch가 없는 좀 더 간결한 코드를 만들 수 있다.
+
+```java
+public class Calculator {
+    public static void main(String args[]) {
+        Calculator sample = new Calculator();
+        sample.throwMyException(13);
+    }
+
+    public void throwMyException(int number) throws MyException {
+        if(number > 12) {
+            throw new MyException("Number is over than 12");
+        }
+    }
+}
+
+class MyException extends RuntimeException {
+    public MyException() {
+        super();
+    }
+    public MyException(String message) {
+        super(message);
+    }
+}
+```
