--- a/Java/Basic/12. String.md
+++ b/Java/Basic/12. String.md
@@ -4,3 +4,200 @@
 public final class String exteds Object implements Serializable, Comparable<String>, CharSequence
 ```
 
+String 클래스는 확장을 못하게 하기 위해 final로 선언되어 있다.
+
+String 은 불변한 객체이다.
+
+```java
+String text = "Hello";
+text = text + " World";
+```
+"Hello"를 가지고 있는 객체는 더 이상 사용할 수 없다.
+
+String 클래스는 null 체크하는 습관을 가져야 한다.
+
+지금 당장 외우지는 못해도 어떤 것이 있는지는 파악해두고 천천히 익숙해지도록 하자
+
+## getBytes()
+
+기본 캐릭터 셋의 바이트 배열을 생성
+
+## length()
+
+문자열의 길이를 확인
+
+## isEmpty()
+
+문자열이 비어있는지 확인
+
+## 문자열 비교
+
+- equals() : String은 equals()를 사용을 권장함
+
+- compareTo()
+
+- contentEquals()
+
+## 특정 조건에 맞는 문자열이 있는지 확인하는 메소드
+
+- startsWith()
+
+- endsWith()
+
+- contains()
+
+- matches()
+
+- regionMatches()
+
+- regionMatches()
+
+## String 내에서의 위치 찾기
+
+- indexOf()
+
+- lastIndexOf()
+
+## String 일부를 추출하기
+
+### char 단위로 추출
+
+- charAt()
+
+- getChars()
+
+- codePointAt()
+
+- codePointBefore()
+
+- codePointCount()
+
+- offsetByCodePoints()
+
+### char 배열을 String으로 변환
+
+- copyValueOf()
+
+### String을 char 배열로 변환
+
+- toCharArray()
+
+### 문자열 일부를 잘라내는 메소드
+
+- substring()
+
+### 문자열을 여러 개의 String 배열로 나누는 메소드
+
+- split()
+
+## 문자열의 값을 바꾸는 메소드
+
+### 문자열을 합치는 메소드
+
+- concat()
+
+### 문자열의 공백을 제거해주는 메소드
+
+- trim()
+
+### 내용을 교체하는 메소드
+
+- replace()
+
+- replaceAll()
+
+- replaceFirst()
+
+### 특정 형식에 맞춰 값을 치환하는 메소드
+
+- format()
+
+### 대소문자를 바꾸는 메소드
+
+- toLowerCase()
+
+- toUpperCase()
+
+### 기본자료형을 문자열로 변환하는 메소드
+
+- valueOf()
+
+
+## native
+
+C로 구현된 native 메소드가 있다.
+
+```
+public native String intern();
+```
+
+## StringBuffer(Thread safe), StringBuilder(Thread unsafe)
+
+String 클래스를 단점(불변한 객체)을 보완하기 위해 나온 클래스
+
+```
+StringBuilder sb = new StringBuiler();
+sb.append("Hello").append(" world");
+```
+
+
+
+--------
+
+```java
+public class UseStringMethods {
+
+    public void printContainWords(String str, String findStr) {
+        String[] strArr = str.split(" ");
+        
+        for(String data : strArr) {
+            if( data.contains(findStr) ) {
+                System.out.println(data + " contains " + findStr);
+            }
+        }
+    }
+
+    public void countChar(String str, char c) {
+        char[] chArr = str.toCharArray();
+        int count = 0;
+
+        for(char ch : chArr) {
+            if(ch == c) {
+                count++;
+            }
+        }
+
+        System.out.println( "char \'" + c + "\'" + " count is " + count);
+    }
+
+    public void findAnyCaseString(String str, String findStr) {
+        String lowerStr = str.toLowerCase();
+        int index = lowerStr.indexOf(findStr);
+        System.out.println(findStr + " is appeared at " + index);
+    }
+
+    public void findString(String str, String findStr) {
+        int index = str.indexOf(findStr);
+        System.out.println(findStr + " is appeared at " + index);
+    }
+
+    public void printWord(String str) {
+        String[] strArr = str.split(" ");
+
+        for(String data : strArr) {
+            System.out.println( data );
+        }
+    }
+    
+    public static void main(String[] args) {
+        String str = "The String class represents character strings.";
+        
+        UseStringMethods usm = new UseStringMethods();
+        usm.printWord(str);
+        usm.findString(str, "string");
+        usm.findAnyCaseString(str, "string");
+        usm.countChar(str, 's');
+        usm.printContainWords(str, "ss");
+    }
+}
+```
