--- a/Java/Basic/03. Object.md
+++ b/Java/Basic/03. Object.md
@@ -110,6 +110,62 @@ getClass().getName() + '@' + Integer.toHexString(hashCode())
 
 - 객체에 대하여 더하기 연산을 하는 경우
 
+## equals
+
+두 객체의 동등성을 비교해주는 메서드
+
+### == vs equals
+
+```java
+public class equals {
+    public static void main(String[] args) {
+        String str1 = "test1";
+        String str2 = "test1";
+
+        System.out.println(str1 == str2); // true
+        System.out.println(str1.equals(str2)); // true // Constant pool
+
+        String str3 = new String("test1");
+        String str4 = new String("test1");
+
+        System.out.println(str3 == str4); // false
+        System.out.println(str3.equals(str4)); // true
+
+        System.out.println(str1 == str3); // false
+        System.out.println(str1.equals(str3)); // true
+
+        System.out.println(str1.hashCode()); // 110251487
+        System.out.println(str2.hashCode()); // 110251487
+        System.out.println(str3.hashCode()); // 110251487
+        System.out.println(str4.hashCode()); // 110251487
+
+        Person p1 = new Person("geol");
+        Person p2 = new Person("geol");
+
+        System.out.println(p1.equals(p2)); // false -> name필드에 의해 동등성에 해당되어 equals()를 재정의할 필요가 있음
+
+        System.out.println(p1.hashCode()); // 705927765
+        System.out.println(p2.hashCode()); // 366712642
+    }
+}
+```
+
+### == 연산자 : 두 객체의 메모리 주소값이 같은지 검사한다 (동일성)
+
+### equals 연산자 : 두 객체의 논리적 정보가 같은지 검사한다 (동등성)
+
+### equals의 오버라이딩 시, hashCode()를 왜 오버라이딩 해야할까? 
+
+hashCode 구현 시 지켜야할 조건?
+
+- 자바를 실행할 때마다 같은 hashCode일 필요는 없지만, 수행되는 동안에는 같은 hashCode여야 한다.
+
+- 객체의 equals() 메소드를 사용하여 비교한 결과가 true이면, 두 객체의 hashCode()는 꼭 같은 값을 리턴해주어야 한다.
+
+- 객체의 equals() 메소드를 사용하여 비교한 결과가 false라도, 두 객체의 hashCode()는 다를 필요는 없다. 하지만, 다른 hashCode를 리턴한다면 Collection의 성능을 향상시킬 수 있다.
+
+-----
+
 ```java
 
 class Student {
