[JAVA] Collection 수정

--- a/Java/Basic/01. Class Method.md
+++ b/Java/Basic/01. Class Method.md
@@ -76,6 +76,10 @@ static {
 }
 ```
 
+클래스 변수(static)와 인스턴스 변수(non-static)에는 문법적인 차이말고도 메모리에 생성시점의 차이가 크다.
+
+이 내용에 대해선 별도 블로그에 작성해두었다. [클릭해서 이동](https://geol2.github.io/til/Class-Instance-Variable/)
+
 # this
 
 그대로 "이 객체"를 의미한다.
