--- a/Java/Basic/17. Collection.md
+++ b/Java/Basic/17. Collection.md
@@ -2,6 +2,10 @@
 
 List, Set, Queue는 Collection 인터페이스를 구현하고 있다.
 
+Set 은 HashSet, TreeSet 클래스가 있다.
+List 는 ArrayList, LinkedList 클래스가 있다.
+Queue 는 LinkedList, PriorityQueue 클래스가 있다.
+
 ```java
 public interface Collection<E> extends Iterable<E>
 ```
@@ -25,7 +29,7 @@ Collection 인터페이스에서 구현된 메소드들은 다음과 같다.
 | Object[] | toArray()               | 컬렉션에 있는 데이터들을 배열로 복사한다. |
 | <T> T[]  | toArray(T[])            | 컬렉션에 잇는 데이터들을 지정한 타입의 배열로 복사한다. |
 
-## ArrayList
+## ArrayList (List)
 
 ArrayList 상속 관계
 
@@ -58,3 +62,31 @@ Serializable, Cloneable, Interable<E>, Collection<E>, List<E>, RandomAccess
 | boolean   | removeAll(Collection<?> c)                  | 매개 변수로 넘어온 컬렉션 객체에 있는 데이터와 동일한 모든 데이터를 삭제한다. |
 | E         | set(int index, E element)                   | 지정한 위치에 있는 데이터를 두번째 매개변수로 넘긴 값으로 변경한다. 그리고, 해당 위치에 있던 데이터를 리턴한다. |
 
+## Set
+
+순서에 상관없이 어떤 데이터가 존재하는지 확인하기 위한 용도
+
+- HashSet : 순서가 전혀 필요 없는 데이터를 해시 테이블에 저장한다.
+- LinkedHashSet : 연결된 목록 타입으로 구현된 해시 테이블에 데이터를 저장한다.
+- TreeSet : red-black 트리 타입으로 값이 저장되며, 저장된 데이터의 값에 따라서 정렬되는 Set
+
+
+LinkedList
+
+- List, Queue, Deque 인터페이스를 구현한다.
+
+Queue
+
+- FIFO 기능을 구현할 때 사용되는 클래스
+
+DeQueue
+
+- Queue의 기능을 확장, 맨 앞과 맨 뒤의 데이터를 삽입하거나 제거하는데 용이
+
+Stack
+
+- List 인터페이스를 구현하였고 LIFO 기능을 구현할 때 사용되는 클래스
+
+------
+
+- 해시 테이블 : 자료구조 중의 하나로 key, value를 저장하는 데이터 구조
