--- a/Java/Basic/18. Map.md
+++ b/Java/Basic/18. Map.md
@@ -11,3 +11,39 @@ HashMap, TreeMap, LinkedHashMap 등은 Map의 인터페이스를 구현해두고
 ## Properties 클래스
 
 시스템 정보를 가지고 있는 클래스로 Map 인터페이스를 구현해서 만들어졌다.
+
+-----
+
+## MapHash
+- Map 인터페이스의 구현 클래스
+-----
+
+- 키, 값인 pair 관계를 가지는 형태인 자료구조
+
+- 예제
+```java
+import java.util.HashMap;
+
+public class MapGetOrDefaultEx { 
+  public static void main(String arg[]) { 
+    Map<String, Integer> map = new HashMap<>();
+    map.put("One", 1);
+    map.put("Two", 2);
+    map.put("Three", 3);
+    System.out.println(map);
+  }
+```
+
+```java
+import java.util.HashMap;
+
+public class MapGetOrDefaultEx { 
+  public static void main(String arg[]) { 
+    String [] alphabet = { "A", "B", "C" ,"A"};
+    HashMap<String, Integer> hm = new HashMap<>();
+    for(String key : alphabet) {
+      hm.put(key, hm.getOrDefault(key, 0) + 1);
+    }
+    System.out.println("결과 : " + hm); // 결과 : {A=2, B=1, C=1} } 
+  }
+```
