--- a/Java/Expert/01. JVM.md
+++ b/Java/Expert/01. JVM.md
@@ -1,3 +1,20 @@
+## JVM (자바 가상 머신)
+  - 운영체제에 관계없이 자바를 구동할 수 있는 가상환경을 제공
+
+  ### JIT(Just-In-Time)
+
+  ```
+  컴파일과 인터프리터 방식을 통해서 프로그램을 실행하는데, JVM에서 기계코드로 변하는 부분에서 JIT를 수행한다.
+  ```
+
+  ### HotSpot
+
+  2개 이상의 물리적 프로세서와 2GB 이상의 물리적 메모리를 기준으로 클라이언트와 서버 컴파일러를 선택한다.
+  
+  - HotSpot 클라이언트 컴파일러 : CPU 코어가 하나뿐인 그런 사용자를 위해서 만들어진 것
+  - HotSpot 서버 컴파일러 : CPU 코어가 많은 장비에서 애플리케이션을 돌리기 위해서 만들어진 것  
+  
+
 # JVM 메모리 구조
 
 | Source Code (.java) &rightarrow; Byte Code (.class) |
@@ -21,7 +38,6 @@ Stack, PC Register, Native Method Stack 은 쓰레드마다 하나씩 존재함
 JVM 이 시작될 때 생성되는 공간으로 바이트코드가 이 영역에 저장
 
 클래스 정보, 변수 정보, static 으로 선언한 변수가 저장됨
-
 
 2. Heap
 
@@ -56,6 +72,7 @@ Person p = new Person("geol", 29);
 
 | Source Code (.java) &rightarrow; Byte Code (.class) &rightarrow; class Loader &rightarrow; Runtime Data Area &rightarrow; Execution Engine |
 |-----------------------------------------------------|
+
 ## Execution Engine
 
 로드된 클래스 파일의 바이트코드를 실행하는 엔진
@@ -73,7 +90,7 @@ Person p = new Person("geol", 29);
 바이트코드를 실행시키기 위해서는 기계어로 바꾸는 작업이 필요한데 엔진 내부의 Interpreter, JIT Compiler가 해당 기계어로 바꾸는 작업을 수행한다.
 
 
-| Source Code (.java) &rightarrow; Byte Code (.class) &rightarrow; class Loader &rightarrow; Runtime Data Area &rightarrow; Execution Engine &leftarrow;&rightarrow; Native Method Interface &leftarrow;&rightarrow; Native Method Library |
+| Source Code (.java) &rightarrow; Byte Code (.class) &rightarrow; class Loader &rightarrow; Runtime Data Area &rightarrow; Execution Engine &leftrightarrow; Native Method Interface &leftrightarrow; Native Method Library |
 |--------------------------------------------|
 
 ## Native Method Interface (JNI)
