[JAVA] Object 원리 추가

--- a/Java/Expert/01. JVM.md
+++ b/Java/Expert/01. JVM.md
@@ -1,19 +1,18 @@
-## JVM (자바 가상 머신)
+# JVM (자바 가상 머신)
   - 운영체제에 관계없이 자바를 구동할 수 있는 가상환경을 제공
 
-  ### JIT(Just-In-Time)
+  ## JIT(Just-In-Time)
 
   ```
   컴파일과 인터프리터 방식을 통해서 프로그램을 실행하는데, JVM에서 기계코드로 변하는 부분에서 JIT를 수행한다.
   ```
 
-  ### HotSpot
+  ## HotSpot
 
   2개 이상의 물리적 프로세서와 2GB 이상의 물리적 메모리를 기준으로 클라이언트와 서버 컴파일러를 선택한다.
   
   - HotSpot 클라이언트 컴파일러 : CPU 코어가 하나뿐인 그런 사용자를 위해서 만들어진 것
-  - HotSpot 서버 컴파일러 : CPU 코어가 많은 장비에서 애플리케이션을 돌리기 위해서 만들어진 것  
-  
+  - HotSpot 서버 컴파일러 : CPU 코어가 많은 장비에서 애플리케이션을 돌리기 위해서 만들어진 것 
 
 # JVM 메모리 구조
 
