--- a/Java/Basic/03. Object.md
+++ b/Java/Basic/03. Object.md
@@ -9,6 +9,8 @@
 
 생성자는 객체를 만들 때, 자동으로 생성이 되고 클래스의 이름과 같은 함수의 형태를 가지고 있다.
 
+## java
+
 - 모듈화 : 서로 다른 객체에서 독립적이고 유지관리가 된다. 쉽게 시스템에 흡수할 수 있다.
 
 - 캡슐화 : 객체의 메서드와만 상호 작용하고 내부 상태가 나타나있지 않다.
@@ -18,6 +20,13 @@
 - 쉬운 디버깅과 플러그 가능성 : 문제가 있는 객체를 간단히 제거할 수 있고 다른 객체로 연결할 수 있다. 볼트가 부러진다고 기계 전체를 바꾸기보다 볼트를 교체해야 한다.
 
 프로필을 나타내는 클래스를 만들어 함수를 정의하고 setter를 만들고 출력하는 것까지 명령어를 통해서 확인을 해보았다.
+
+## 객체지향의 4대 특성
+
+- 캡슐화
+- 상속
+- 추상화
+- 다형성
 
 ```java
 class Profile {
