[JAVA] Object, Thread 수정

--- a/Java/Basic/03. Object.md
+++ b/Java/Basic/03. Object.md
@@ -173,6 +173,51 @@ hashCode 구현 시 지켜야할 조건?
 
 - 객체의 equals() 메소드를 사용하여 비교한 결과가 false라도, 두 객체의 hashCode()는 다를 필요는 없다. 하지만, 다른 hashCode를 리턴한다면 Collection의 성능을 향상시킬 수 있다.
 
+동일하지 않은 객체라도 논리적 동등한 객체는 같은 해시코드를 반환해야 한다. HashMap, HashSet 컬렉션을 사용할 때, 문제가 발생된다.
+
+```java
+class PhoneNumber {
+
+    public int num1;
+    public int num2;
+    public int num3;
+
+    public PhoneNumber(int a, int b, int c) {
+        this.num1 = a;
+        this.num2 = b;
+        this.num3 = c;
+    }
+
+     @Override
+    public boolean equals(Object o) {
+        if (this == o) return true;
+        if (o == null || getClass() != o.getClass()) return false;
+        PhoneNumber p = (PhoneNumber) o;
+
+        return num1 == p.num1 
+                && num2 == p.num2 
+                && num3 == p.num3;
+    }
+
+    @Override
+    public int hashCode() { return 1; }
+
+}
+
+public static void main(String[] args) {
+    Map<PhoneNumber, String> m = new HashMap<>();
+    m.put( new PhoneNumber(707, 867, 5309), "제니" );
+    String val = m.get( new PhoneNumber(707, 867, 5309) );
+    System.out.println( val );
+}
+```
+
+위 코드를 보면 메인함수에서 `new PhoneNumber` 는 두 번 사용이 되었다.
+논리적으로 동등한 해쉬인지 확인해서 맞다면 같은 해쉬코드를 주기로 만들었지만, 위 코드처럼 모든 객체에 대해 `1` 을 리턴해선 절대 안되고 적절한 값을 만들어줘야 한다. 
+
+`PhoneNumber` 객체가 동일하므모 put 이후, get을 할 때 같은 해쉬코드라서 "제니"를 찾을 수 있다.
+
+
 -----
 
 ```java
