--- a/Java/Basic/02. Environment.md
+++ b/Java/Basic/02. Environment.md
@@ -25,6 +25,9 @@ JDK 는 JRE 에 속해있으며, JRE 는 JVM 에 속해있다.
   - 컴퓨터 소프트웨어의 제품 생명주기 관리 정책
   - 소프트웨어 업데이트 (패치)의 유형과 빈도를 변경하여 소프트웨어 배포의 위험부담, 비용 및 급작스런 중단을 줄이면서 소프트웨어의 신뢰성을 향상
 
+### Java SE
+  - Java 표준 문법을 의미함, 현재 8, 11, 17이 표준으로 채택되어 있다
+
 ## 간단한 프로그램 작성으로 컴파일 이해하기
   1. Profile.java 작성
 
