[JAVA] 가비지 컬렉션

--- a/Java/Basic/20. Garbage Collection.md
+++ b/Java/Basic/20. Garbage Collection.md
@@ -27,7 +27,7 @@
 
 힙 내부에서 Young, Old(Tenured), Permanent 세 가지로 더 작은 부분으로 나뉘게 된다.
 
-<img src="./../images/young-old.PNG">
+<img src="./../images/young-old-heap.PNG">
 
 - Young : 모든 새 객체가 할당되는데, 해당 Young 이 가득 차면 **마이너 가비지 컬렉션**이 발생된다. 마이너 가비지 컬렉션은 쉽게 사라지는 객체에 대해서 최적화할 수 있게 한다.
 
