[JAVA] Thread, Exception, Object 수정

--- a/Java/Basic/11. Exception.md
+++ b/Java/Basic/11. Exception.md
@@ -30,9 +30,13 @@ catch 블록의 순소는 중요하다.
 
 ## 예외의 종류
 
-- checked Exception : error와 런타임 예외를 제외한 모든 예외
-- error : 자바 프로그램 밖에서 일어나는 예외
-- runtime Exception : 런타임 예외라고 불리며 컴파일 체크를 하지 않는다
+### Checked Exception 
+  - error와 런타임 예외를 제외한 모든 예외
+  - 컴파일에서 나타나는 예외
+
+### Unchecked Exception
+  - error : 자바 프로그램 밖에서 일어나는 예외
+  - runtime Exception : 런타임 예외라고 불리며 컴파일 체크를 하지 않는다
 
 ## 예외를 만들어 보자
 
