[JSP, WEB] Basic 추가

--- a/Java/Basic/19. Thread.md
+++ b/Java/Basic/19. Thread.md
@@ -81,7 +81,7 @@ RunThreads.runBasic() method is ended.
 |---------------|------------------------------------------------------------|
 | NEW           | 쓰레드 객체는 생성되었지만, 아직 시작되지는 않은 상태          |
 | RUNNABLE      | 쓰레드가 실행중인 상태                                       |
-| BLOACKED      | 쓰레드가 실행 중지 상태이며, 모니터락이 풀리기를 기다리는 상태  |
+| BLOCKED      | 쓰레드가 실행 중지 상태이며, 모니터락이 풀리기를 기다리는 상태  |
 | WAITING       | 쓰레드가 대기중인 상태                                       |
 | TIMED_WAITING | 특정 시간만큼 쓰레드가 대기중인 상태                          |
 | TERMINATED    | 쓰레드가 종료된 상태                                         |
