[JAVA] Nested Class 'Static' 이 좋은 이유 추가

--- a/Java/Basic/13. Nested Class.md
+++ b/Java/Basic/13. Nested Class.md
@@ -38,6 +38,11 @@ public class NestedSample {
 }
 ```
 
+nested class 사용 시, static을 붙이는 것을 권장하는데
+
+1. 외부 객체에 대한 참조를 가비지 컬렉션이 수거를 하지 못해 누수가 발생될 수 있다.
+2. 외부 객체의 참조값을 필요로 하기 때문에 성능상 나쁘다.
+
 ## 내부 클래스
 
 Nested 클래스에서 감싸고 있는 클래스의 private 로 선언된 변수로 접근은 가능하다.
