[CS] 프로세스 수정

--- a/Java/Expert/02. Runtime-Area.md
+++ b/Java/Expert/02. Runtime-Area.md
@@ -11,7 +11,7 @@
 
 메소드, 스택, 힙 영역은 실제로 많이 사용되고 다루게 되는 주제라서 이 부분에 대해 잘 파악하면 좋을 것 같다.
 
-## 메소드 영역 (= 클래스, 스태틱 영역)
+## 메소드 영역 (= 데이터, 클래스, 스태틱 영역)
 
 다양한 자료들에서 메소드 영역이라는 이름이 다양하게 쓰이는데 편하게 메소드 영역이라고 불리는 것이 좋을 것 같다. 주로 static 키워드가 포함된 변수나 함수들이 해당 영역에 할당된다.
 
