[JAVA] 8버전 변화와 가비지컬렉션, Optional 추가

--- a/Java/Basic/20. Garbage Collection.md
+++ b/Java/Basic/20. Garbage Collection.md
@@ -29,7 +29,7 @@
 
 <img src="./../images/young-old-heap.PNG">
 
-- Young : 모든 새 객체가 할당되는데, 해당 Young 이 가득 차면 **마이너 가비지 컬렉션**이 발생된다. 마이너 가비지 컬렉션은 쉽게 사라지는 객체에 대해서 최적화할 수 있게 한다.
+- Young : 모든 새 객체가 할당되는데, 해당 Young 이 가득 차면 **마이너 가비지 컬렉션**이 발생된다. 마이너 가비지 컬렉션은 쉽게 사라지는 객체에 대해서 최적화할 수 있게 한다. 대부분의 객체는 Young에서 죽는다.
 
 - Stop the World : 모든 마이너 가비지 컬렉션에 대해선 "Stop the World" 라는 이벤트로 불린다. 이것은 작업이 완료될 때까지 모든 애플리케이션 스레드가 중지됨을 의미함, 객체들의 상태를 완전히 반영해서 정확하게 식별하기 위해서이다.
 
@@ -45,6 +45,8 @@
 
 - eden : 객체가 생성될 때 저장되는 장소
 - from, to survivor : eden이 다차면 살아있는 객체만 해당 영역으로 복사되는 장소, 번갈아가는 것이 특징임
+
+survivor 영역이 왜 두 개일까? 마이너 가비지 컬렉션의 대상이 Eden에만 국한되어 있는게 아니라 Survivor 영역까지 Minor GC를 하기 때문이라고 한다.
 
 1. 모든 새 객체가 eden 공간에 할당됨. 두 survivor 공간은 비어있다.
 
