--- a/Java/Basic/21. Java-change.md
+++ b/Java/Basic/21. Java-change.md
@@ -54,7 +54,9 @@ switch (text) {
 
 # JAVA 8
 
-기존 프로젝트의 유지보수를 위해 해당 버전을 가장 많이 사용
+기존 프로젝트의 유지보수를 위해 해당 버전을 가장 많이 사용되기도 하고,
+
+함수형 프로그래밍 패러다임, 체이닝 방식에 적응하기 위해 많은 표현식이 생겼다. 
 
 1. 람다 표현식 추가
 
