[JAVA] Object 다형성 추가

--- a/Java/Basic/03. Object.md
+++ b/Java/Basic/03. Object.md
@@ -26,7 +26,7 @@
 - 캡슐화
 - 상속
 - 추상화
-- 다형성
+- 다형성 : 객체를 변경해야할 때, 타입 변경 없이 객체 주입만으로 수정이 일어나게 할 수 있음, 말 그래도 다양한 자료형에 속하는 것이 되는 성질
 
 ```java
 class Profile {
