[JAVA] 가비지 컬렉션 추가, 배열 수정, ConcurrentHashMap에 대해 추가

--- a/Java/Basic/07. Array.md
+++ b/Java/Basic/07. Array.md
@@ -13,7 +13,7 @@
 ## 이차원 배열
 
 - 타입[][] 변수이름;
-- 변수이름 = new 타입[길이1][길이2]; // 길이1은 필수!
+- 변수이름 = new 타입[길이1][길이2]; // 길이1은 필수, [행][렬] 로 생각하자
 
 - 타입[][] 변수이름 = { {...}, {...}, {...}, ...};
 
