--- a/Java/Basic/20. Garbage Collection.md
+++ b/Java/Basic/20. Garbage Collection.md
@@ -2,9 +2,13 @@
 
 자바는 C와 달리 자동으로 힙 메모리를 살펴보고 사용하지 않는 객체를 삭제해주는 프로세스이다.
 
+어떤 객체에 유효한 참조가 있으면 'Reachable', 없으면 'Reachability'라고 하며 'Reachability' 라는 개념을 사용한다.
+
+객체는 다른 여러 객체를 참조하고 다른 여러 객체들도 또 다른 객체들을 참조해서 참조트리를 이루는데, 이를 통해 유효한 최초 객체가 존재하는데 'GC Root' 라고 불린다.
+
 ## Step 1 : Marking (마킹)
 
-가비지 컬렉터가 사용 중인 메모리와 그렇지 않은 메모리를 식별하는데 마킹 단계에서 모든 객체를 스캔한다고 한다.
+가비지 컬렉터가 사용 중인 메모리와 그렇지 않은 메모리를 식별하는데 마킹 단계에서 모든 객체를 스캔한다고 한다. 스캔을 위해 GC 스레드 이외의 모든 스레드는 중지되며 Stop the world 라고 한다. 
 
 ## Step 2 : Normal Deletion (일반 삭제)
 
@@ -76,6 +80,7 @@ Young 영역에서의 프로세스(마이너)를 다룬 것이다. 공간을 정
 
 ------
 
+[d2 NAVER](https://d2.naver.com/helloworld/329631)
 [가비지 컬렉션에 관한 문서](https://www.oracle.com/webfolder/technetwork/tutorials/obe/java/gc01/index.html)
 
 메이저 가비지 컬렉션 : Old 영역이 다차면 발생, 결국 공간을 정리하고 밀집시킴
