[JAVA] 가비지 컬렉션 수정

--- a/Java/Basic/20. Garbage Collection.md
+++ b/Java/Basic/20. Garbage Collection.md
@@ -31,7 +31,7 @@
 
 힙 내부에서 Young, Old(Tenured), Permanent 세 가지로 더 작은 부분으로 나뉘게 된다.
 
-<img src="https://github.com/Geol2/Today-I-Learned/tree/main/Java/images/young-old-heap.PNG">
+<img src="https://github.com/Geol2/Today-I-Learned/blob/main/Java/images/young-old-heap.PNG?raw=true">
 
 - Young : 모든 새 객체가 할당되는데, 해당 Young 이 가득 차면 **마이너 가비지 컬렉션**이 발생된다. 마이너 가비지 컬렉션은 쉽게 사라지는 객체에 대해서 최적화할 수 있게 한다. 대부분의 객체는 Young에서 죽는다.
 
@@ -52,7 +52,7 @@
 
 ### survivor 영역이 왜 두 개일까?
 
-<img src="https://github.com/Geol2/Today-I-Learned/tree/main/Java/images/단편화.png" />
+<img src="https://raw.githubusercontent.com/Geol2/Today-I-Learned/main/Java/images/%EB%8B%A8%ED%8E%B8%ED%99%94.png" />
 
 메모리가 할당되고 해제되기를 반복하다보면 메모리 공간은 남지만 파편화되어있어 메모리를 할당할 수 없는 문제가 발생한다. 그래서 두개의 Survivor 끼리 번갈아가며 메모리를 할당하며 이를 방지한다. 
 
