--- a/Java/Basic/20. Garbage Collection.md
+++ b/Java/Basic/20. Garbage Collection.md
@@ -78,9 +78,13 @@ Young 영역에서의 프로세스(마이너)를 다룬 것이다. 공간을 정
 
 ## Parallel GC
 
+Java8 까지 Parallel GC 모델이 기본으로 사용된다. 
+
 ## Concurrent Mark Sweep (CMS) Collector
 
 ## G1 Garbage Collector
+
+Java9 부터는 기본으로 G1 GC가 기본으로 사용된다.
 
 ------
 
