--- a/Java/Basic/22. volatile.md
+++ b/Java/Basic/22. volatile.md
@@ -30,6 +30,7 @@ public class RunVolatile {
 
     public void runVolatileSample() {
         VolatileSample sample = new VolatileSample();
+        sample.start();
         try {
             Thread.sleep(1000);
         } catch(Exception e) {
@@ -46,8 +47,11 @@ public class RunVolatile {
 Sleep ended !!!
 Set value is completed!
 ```
+프로그램이 종료되지 않는다. 프로그램이 종료되지 않는 이유는 `instanceVariable` 값이 0이기 때문에 그렇다
 
-`-1` 을 출력하기 위해서 `private volatile double instanceVariable = 0;`로 바꾸면 된다.
+메모리의 값을 바꾸는 것이 아니라, 서로 다른 CPU 캐시에 있는 `instanceVariable`값이 바뀌기 떄문이다.
+
+`-1` 을 출력하기 위해서 `private volatile double instanceVariable = 0;`로 바꾸면 메모리에 저장되므로 예상했던 결과가 나온다
 
 ```
 Sleep ended !!!
