[JAVA] CAS 이동, volatile 수정

--- a/Java/Basic/22. volatile.md
+++ b/Java/Basic/22. volatile.md
@@ -1,12 +1,14 @@
 # volatile
 
-해당 예약어는 변수 선언 시에만 사용될 수 있고, 변수를 메인 메모리에 저장하겠다는 것을 명시하는 것으로 스레드 안에서 쓰는 것이 적절하다
+해당 예약어는 변수 선언 시에만 사용될 수 있고, 변수를 메인 메모리에 저장하겠다는 것을 명시하는 것
 
-스레드의 인스턴스 변수는 CPU cache에 저장된다.
+상태를 동기화할 때 쓰이는 것
 
 volatile 변수의 값을 읽을 때는 CPU cache 에 저장된 값이 아닌 메인 메모리에서 읽는다고 한다
 
 volatile 변수의 값을 쓸 때는 메인 메모리에까지 작성하는 것
+
+읽기, 쓰기에 대한 동기화를 보장하지만, 연산에 대하서는 동기화를 보장하지 않는다
 
 ```java
 class VolatileSample extends Thread {
@@ -47,6 +49,7 @@ public class RunVolatile {
 Sleep ended !!!
 Set value is completed!
 ```
+
 프로그램이 종료되지 않는다. 프로그램이 종료되지 않는 이유는 `instanceVariable` 값이 0이기 때문에 그렇다
 
 메모리의 값을 바꾸는 것이 아니라, 서로 다른 CPU 캐시에 있는 `instanceVariable`값이 바뀌기 떄문이다.
