--- a/Java/Basic/17. Collection.md
+++ b/Java/Basic/17. Collection.md
@@ -29,63 +29,33 @@ Collection 인터페이스에서 구현된 메소드들은 다음과 같다.
 | Object[] | toArray()               | 컬렉션에 있는 데이터들을 배열로 복사한다. |
 | <T> T[]  | toArray(T[])            | 컬렉션에 잇는 데이터들을 지정한 타입의 배열로 복사한다. |
 
-## ArrayList (List)
-
-ArrayList 상속 관계
-
-```
-java.lang.Object
-  ㄴjava.util.AbstractCollection<E>
-      ㄴjava.util.ArrayList<E>
-```
-
-ArrayList가 구현한 인터페이스
-
-```java
-Serializable, Cloneable, Interable<E>, Collection<E>, List<E>, RandomAccess
-```
-
-| 리턴 타입 | 메소드 이름 및 매개 변수                       | 설명                                                                   |
-| boolean  | add(E e)                                     | 매개 변수로 넘어온 데이터를 가장 끝에 담는다. |
-| boolean  | addAll(Collection)                           | 매개 변수로 넘어온 데이터를 지정된 index 위치에 담는다. |
-| void     | addAll(Collection<? extends E> c)            | 매개 변수로 넘어온 컬렉션 데이터를 가장 긑에 담는다. |
-| boolean  | addAll(int index, Collection<? extends E> c) | 매개 변수로 넘어온 컬렉션 데이터를 index에 지정된 위치부터 담는다. |
-| int      | size()                                       | ArrayList 객체에 있는 데이터의 개수를 리턴한다. |
-| E         | get(int index)                              | 매개 변수에 지정한 위치에 있는 데이터를 리턴한다. |
-| int       | indexOf(Object o)                           | 매개 변수로 넘어온 객체와 동일한 데이터의 위치를 리턴한다. |
-| int       | lastIndexOf(Object o)                       | 매개 변수로 넘어온 객체와 동일한 마지막 데이터의 위치를 리턴한다. |
-| Object[]  | toArray()                                   | ArrayList 객체에 있는 값들을 Object[] 타입의 배열로 만든다. |
-| <T> T[]   | toArray(T[] a)                              | ArrayList 객체에 있는 값들을 매개 변수로 넘어온 T 타입의 배열로 만든다. |
-| void      | clear                                       | 모든 데이터를 삭제한다. |
-| E         | remove(int index)                           | 매개 변수에서 지정한 위치에 있는 데이터를 삭제하고, 삭제한 데이터를 리턴한다. |
-| boolean   | remove(Object o)                            | 매개 변수에 넘어온 객체와 동일한 첫 번째 데이터를 삭제한다. |
-| boolean   | removeAll(Collection<?> c)                  | 매개 변수로 넘어온 컬렉션 객체에 있는 데이터와 동일한 모든 데이터를 삭제한다. |
-| E         | set(int index, E element)                   | 지정한 위치에 있는 데이터를 두번째 매개변수로 넘긴 값으로 변경한다. 그리고, 해당 위치에 있던 데이터를 리턴한다. |
-
 ## Set
 
-순서에 상관없이 어떤 데이터가 존재하는지 확인하기 위한 용도
+순서에 상관없고 중복이 있다면 중복된 데이터는 없애는 인터페이스
+
+어떤 데이터가 존재하는지 확인하기 위한 목적
 
 - HashSet : 순서가 전혀 필요 없는 데이터를 해시 테이블에 저장한다.
 - LinkedHashSet : 연결된 목록 타입으로 구현된 해시 테이블에 데이터를 저장한다.
 - TreeSet : red-black 트리 타입으로 값이 저장되며, 저장된 데이터의 값에 따라서 정렬되는 Set
 
-
-LinkedList
+### LinkedList
 
 - List, Queue, Deque 인터페이스를 구현한다.
 
-Queue
+### Queue
 
 - FIFO 기능을 구현할 때 사용되는 클래스
 
-DeQueue
+### DeQueue
 
 - Queue의 기능을 확장, 맨 앞과 맨 뒤의 데이터를 삽입하거나 제거하는데 용이
 
-Stack
+### Stack
 
 - List 인터페이스를 구현하였고 LIFO 기능을 구현할 때 사용되는 클래스
+
+
 
 ------
 
