--- a/Java/Basic/20. Garbage Collection.md
+++ b/Java/Basic/20. Garbage Collection.md
@@ -37,7 +37,7 @@
 
 - Stop the World : 모든 마이너 가비지 컬렉션에 대해선 "Stop the World" 라는 이벤트로 불린다. 이것은 작업이 완료될 때까지 모든 애플리케이션 스레드가 중지됨을 의미함, 객체들의 상태를 완전히 반영해서 정확하게 식별하기 위해서이다.
 
-- Old : 오래 살아 남은 객체는 해당 영역에 있는데, Young에 대한 임계값이 설정되고 충족되면 Old로 이동하게 된다. Old 영역을 모두 수집하는 작업을 **메이저 가비지 컬렉션**이라고 불린다.
+- Old : 오래 살아 남은 객체는 해당 영역에 있는데, Young에 대한 임계값이 설정되고 충족되면 Old로 이동하게 된다. 지속적으로 이동하다 Old 영역이 꽉차면 **메이저 가비지 컬렉션 / 풀GC**이라고 불린다.
 
 메이저 가비지 컬렉션은 "Stop the World" 이벤트이기도 한데, 종종 모든 살아있는 객체를 포함하기 때문에 많이 느리기도 한다.
 
@@ -54,7 +54,7 @@
 
 <img src="https://raw.githubusercontent.com/Geol2/Today-I-Learned/main/Java/images/%EB%8B%A8%ED%8E%B8%ED%99%94.png" />
 
-메모리가 할당되고 해제되기를 반복하다보면 메모리 공간은 남지만 파편화되어있어 메모리를 할당할 수 없는 문제가 발생한다. 그래서 두개의 Survivor 끼리 번갈아가며 메모리를 할당하며 이를 방지한다. 
+메모리가 할당되고 해제되기를 반복하다보면 메모리 공간은 남지만 단편화로 인한 메모리를 할당할 수 없는 문제가 발생한다. 그래서 두개의 Survivor 끼리 번갈아가며 메모리를 할당하며 이를 방지한다. 
 
 ### 순서
 
@@ -71,6 +71,16 @@
 이후, 오래된 객체가 특정 임계값에 도달하면 Young에서 Old로 승격된다. 마이너 가비지 컬렉션이 발생되면 객체가 계속해서 old 영역으로 승격된다.
 
 Young 영역에서의 프로세스(마이너)를 다룬 것이다. 공간을 정리하고 밀집시키는 Old 영역에서 메이저 가비지 컬렉션이 수행된다.
+
+## 트래픽이 많이 몰리는 이벤트가 예정되어있을때, young gen과 old gen 비율은?
+
+일반적으로는 힙에는 Young : Old = 1 : 3 을 차지한다고 한다
+
+트래픽이 많이 몰린다는 뜻은 객체의 생성이 많이 이루어진다는 의미
+
+이벤트가 있다는 것은 특정 행위만 진행하고 이탈할 가능성이 높아서 수명이 짧은 객체들이 많을 것 같아 Young 의 비율을 늘려야 할 것 같단 생각을 했지만, 애플리케이션의 성격과 구조에 따라서 달라진다고 한다
+
+정답이 없다!
 
 # 가비지 컬렉터
 
