[JAVA] 잘못된 용어 수정

--- a/Java/Basic/20. Garbage Collection.md
+++ b/Java/Basic/20. Garbage Collection.md
@@ -2,7 +2,7 @@
 
 자바는 C와 달리 자동으로 힙 메모리를 살펴보고 사용하지 않는 객체를 삭제해주는 프로세스이다.
 
-어떤 객체에 유효한 참조가 있으면 'Reachable', 없으면 'Reachability'라고 하며 'Reachability' 라는 개념을 사용한다.
+어떤 객체에 유효한 참조가 있으면 'Reachable', 없으면 'unReachable'라고 하며 'Reachability' 라는 개념을 사용한다.
 
 객체는 다른 여러 객체를 참조하고 다른 여러 객체들도 또 다른 객체들을 참조해서 참조트리를 이루는데, 이를 통해 유효한 최초 객체가 존재하는데 'GC Root' 라고 불린다.
 
