--- a/Java/Basic/22. volatile.md
+++ b/Java/Basic/22. volatile.md
@@ -1,6 +1,6 @@
 # volatile
 
-해당 예약어는 변수 선언 시에만 사용될 수 있고, 변수를 메인 메모리에 저장하겠다는 것을 명시하는 것
+해당 예약어는 인스턴스 변수에만 사용될 수 있고, 변수를 메인 메모리에 저장하겠다는 것을 명시하는 것
 
 상태를 동기화할 때 쓰이는 것
 
@@ -50,7 +50,7 @@ Set value is completed!
 
 프로그램이 종료되지 않는다. 프로그램이 종료되지 않는 이유는 `instanceVariable` 값이 0이기 때문에 그렇다
 
-메모리의 값을 바꾸는 것이 아니라, 서로 다른 CPU 캐시에 있는 `instanceVariable`값이 바뀌기 떄문이다.
+메모리의 값을 바꾸는 것이 아니라, 서로 다른 CPU 캐시에 있는 `instanceVariable`값이 바뀌기 때문이다.
 
 `-1` 을 출력하기 위해서 `private volatile double instanceVariable = 0;`로 바꾸면 메모리에 저장되므로 예상했던 결과가 나온다
 
@@ -59,3 +59,5 @@ Sleep ended !!!
 Set value is completed!
 -1
 ```
+
+다수의 쓰레드가 valotile 변수를 읽을 때에 대한 변경 사항 및 변경을 하게 된 코드들의 부작용이 발생할 수 있어서 방지를 위해 프로그래머가 더 많은 주의를 기울여야 한다
