[JAVA] 불변객체 수정

--- a/Java/Concurrency/01. ImmutableObject.md
+++ b/Java/Concurrency/01. ImmutableObject.md
@@ -9,9 +9,9 @@
 1. setter 메소드를 사용하지 말기
 2. 모든 필드를 private, final 로 만들기
 3. 오버라이딩을 허용하지 말기, 더 간단하게 메소드를 final로 선언, 더 정교하게 생성자를 private로 만들고 팩토리 메소드에서 객체를 생성
-4. 인스턴스 변수에 변경 가능한 객체에 대한 참조가 포함되어 있으면 해당 인스턴스 변수도 불변으로 만들어주거나 공유하지 말아야 한다
+4. 인스턴스 변수에 변경 가능한 객체에 대한 참조가 포함되어 있으면 해당 인스턴스 변수는 공유하지 말아야 한다
     - 가변 객체에 대한 참조를 공유하지 말기
-    - 생성자에 전달된 변경 가능한 객체에 대한 참조를 할당하지 말기, 필요한 경우 복사본을 만들고 본사본의 참조를 저장한다.(방어적 복사) 매서드에서 원본을 반환하지 않고 내부 가변 객체의 복사본을 만듬
+    - 생성자에 전달된 변경 가능한 객체에 대한 참조를 할당하지 말기, 필요한 경우 복사본을 만들고 본사본의 참조를 저장한다. (방어적 복사) 매서드에서 원본을 반환하지 않고 내부 가변 객체의 복사본을 만듬
 
 4번에 대한 좀 더 상세한 예제
 
