--- a/Java/Basic/09. Extends.md
+++ b/Java/Basic/09. Extends.md
@@ -16,7 +16,7 @@
 
 ## 표현
 
-<img src="https://github.com/Geol2/Today-I-Learned/blob/main/Java/images/Inheritance-1.png" width="350">
+<img src="https://github.com/Geol2/Today-I-Learned/blob/main/Java/images/extends-1.png" />
 
 ## 메소드 오버라이딩
 
