--- a/Java/Basic/10. Abstract, Implement, Enum.md
+++ b/Java/Basic/10. Abstract, Implement, Enum.md
@@ -1,5 +1,7 @@
 # 인터페이스
 
+<img src="https://github.com/Geol2/Today-I-Learned/blob/main/Java/images/implements-1.png" />
+
 시스템을 구현하기 전에 설계 단계에서 미리 어떤 함수와 클래스를 만들지 설계를 해둘 수 있다.
 
 인터페이스는 interface 라는 키워드를 사용해서 정의하고 인터페이스를 구현할 때, implements 라는 키워드를 사용하고 반드시 메소드를 구현한다.
