--- a/Java/Concurrency/01. ImmutableObject.md
+++ b/Java/Concurrency/01. ImmutableObject.md
@@ -1,6 +1,6 @@
 # 불변 객체
 
-동시성 애플리케이션에서 상태를 변경할 수 없기 떄문에 유용하다
+멀티 스레드에서의 동시성 애플리케이션에서 상태를 변경할 수 없기 떄문에 유용하다
 
 불변 객체는 간단하고 신뢰할 수 있는 코드를 생성하기 위한 전략으로 널리 허용되고 있다
 
@@ -31,6 +31,8 @@ public final class Person {
     // ...
 }
 ```
+
+위 코드는 TOCTOU(Time Of Check / Time Of Use)이라는 검사시점/사용시점 공격의 취약점이 있다.
 
 ```java
 RGB green = new RGB(0, 128, 0);
@@ -71,3 +73,5 @@ public final class Person {
     // ...
 }
 ```
+
+이렇게 방어적 복사를 통해 외부에서 가변 객체를 변경하여도 인스턴스 내의 가변객체는 변경되지 않는다
