[JAVA] AOP 추가 수정

--- a/Java/Spring/04. AOP.md
+++ b/Java/Spring/04. AOP.md
@@ -56,7 +56,9 @@ class AAAABBBB {
 
 ## 어떤 경우일 때, 쓰일까?
 
-성능 및 모니터링 할 때 주로 쓰일 수도 있다
+성능 측정 및 모니터링, 핵심적인 관심사항에 주로 쓰일 수도 있다
+
+사용하는 로직에서 중복해서 들어가는 코드들이 있다면 깔끔하게 유지할 수 있다
 
 ## 다양한 AOP 구현 방법
 
@@ -71,9 +73,34 @@ class AAAABBBB {
 
 스프링 AOP를 사용하면 프록시 패턴을 구현할 필요없이 자동으로 이루어진다
 
-사용하는 로직에서 중복해서 들어가는 코드들이 있다면 고려해볼 필요가 있다
+<img src="https://github.com/Geol2/Today-I-Learned/blob/main/Java/images/Spring/AOP.png" />
 
-더 상세한 내용은 추가로 더 작성해야할 것 같다
+```java
 
+// .java
+@Aspect
+// @Component
+public class TimeTraceApp {
+    @Around("execution(* hello.hellospring..*(..))") // 패키지명.클래스명 등등 원하는 곳에 등록
+    public Object execute(ProceedingJoinPointer joinPoint) throws Throwable {
+        long start = System.currentTimeMillis();
+        System.out.println("START: " + joinPoint.toString());
+        try {
+            return joinPoint.proceed();
+        } finally {
+            long finish = System.currentTimeMillis();
+            long timeMs = finish - start;
+            System.out.println("END : " + joinPoint + " " + timeMs + "ms");
+        }
+    }
+}
+
+//.java 빈으로 직접 등록하거나 컴포넌트 스캔을 사용해도 됨
+@Bean
+public TimeTraceAop timeTraceApp() {
+    return new TimeTraceApp();
+}
+
+```
 -----
 - [프록시 패턴](https://github.com/Geol2/Today-I-Learned/blob/main/Java/Patterns/Proxy.md)
