[Spring] IoC, Bean, DI 수정

--- a/Java/Spring/03. DI.md
+++ b/Java/Spring/03. DI.md
@@ -1,26 +1,19 @@
 # DI (Dependency Injection)
 
-필요한 의존성을 어떻게 받아올 것인가..
+스프링 빈으로 등록된 것을 찾아서 의존성을 주입한다
 
-@AutoWired / @Inject 는 어디에 붙일까?
-  1. 생성자
-  2. 필드
-  3. Setter
+DI를 주입하는 방법
+
+1. 생성자
+2. 필드
+3. Setter
 
 `OwnerController`에 `PetRepository` 주입하기
 
-```java
-class OwnerController {
-    // ...
-    
-    @Autowired
-    private PetRepository petRepository;
-
-    // ...
-}
-```
+1. 생성자를 이용하여 주입 (권장)
 
 ```java
+@Controller
 class OwnerController {
     // ...
     
@@ -33,7 +26,26 @@ class OwnerController {
 }
 ```
 
+2. 필드를 이용하여 주입 (비권장)
+
 ```java
+@Controller
+class OwnerController {
+    // ...
+    
+    @Autowired
+    private PetRepository petRepository;
+
+    // ...
+}
+```
+
+3. Setter를 이용하여 주입
+
+어디서든 할 수 있는..
+
+```java
+@Controller
 class OwnerController {
     // ...
     
