--- a/Java/Spring/02. Bean.md
+++ b/Java/Spring/02. Bean.md
@@ -6,28 +6,36 @@ Ioc 컨테이너가 관리하는 객체를 빈(Bean)이라고 한다
 
 1. Component Scanning
   - @Component
-    - @Repository : 데이터 액세스 계층(DAO) 및 레포지토리 클래스
-    - @Service : 서비스 계층의 클래스
-    - @Controller : 웹 요청을 처리하는 컨트롤러 빈으로 선정
-    - @Configuration : @Configuration 클래스의 @Bean 메소드
+    1. @Repository : 데이터 액세스 계층(DAO) 및 레포지토리 클래스
+    2. @Service : 서비스 계층의 클래스
+    3. @Controller : 웹 요청을 처리하는 컨트롤러 빈으로 선정
 
 2. XML 및 자바 설정 파일로 직접 등록
     - XML : `<bean>` 태그
     - XML : 네임스페이스와 전용 태그
+    - @Configuration : @Configuration 클래스의 @Bean 메소드
+        ```java
+        public class SpringConfig {
+            @Bean
+            public MemberService memberService() {
+                return new MemberService();
+            }
+            @Bean
+            public MemberRepository memberRepository() {
+                return new MemoryMemberRepository();
+            }
+        }
+        ```
 
-- 여러방법이 있으므로 팀의 문화와 정책에 맞는 적절한 조합을 일관성 있게 사용하는 것이 좋을 것 같다.
+여러방법이 있으므로 팀의 문화와 정책에 맞는 적절한 조합을 일관성 있게 사용하는 것이 좋을 것 같다.
+
+스프링 빈으로 등록할 때, 기본으로 싱글톤으로 등록하여 공유한다
 
 ## 사용하는 방법
 
 - @Autowored 또는 @Inject
 - ApplicationContext에서 getBean()으로 직접 사용하기
 
-# IoC (Inverson of Control)
 
-일반적인 의존성에 대한 제어권 : 내가 사용할 의존성은 내가 만든다
-
-```java
-class OwnerController {
-    private OwnerRepository = new OwnerRepository();
-}
-```
+-----
+-[싱글턴]()
