[JAVA] try-with-resource, try-catch 추가

--- a/Java/Basic/21. Java-change.md
+++ b/Java/Basic/21. Java-change.md
@@ -2,7 +2,68 @@
 
 1. 실수, 정수형에 '_' 문자열을 사용할 수 있음
 
-2. try-with-resources 지원
+2. try-catch 개선, try-with-resources 지원
+
+```java
+//..
+Scanner scanner = null;
+try {
+     scanner = new Scanner(new File(fileName, encoding));
+     System.out.println(scanner.nextLine());
+} catch (IllegalArgimentException iae) {
+     iae.printStackTrace();
+} catch (FileNotFoundException ffe) {
+     ffe.printStackTrace();
+} catch (NullPointerException npe) {
+     npe.printStackTrace();
+}
+```
+
+`|` 키워드를 통해 더 짧게 사용할 수 있게 되었다
+
+```java
+Scanner scanner = null;
+try {
+     scanner = new Scanner(new File(fileName, encoding));
+     System.out.println(scanner.nextLine());
+} catch (IllegalArgimentException | FileNotFoundException | NullPointerException e) {
+     e.printStackTrace();
+} finally {
+     if(scanner != null) {
+          scanner.close();
+     }
+}
+```
+
+finally 안의 `close()`를 처리하기 위해서 `AutoCloseable`을 구현한 객체는 finally 문장에서 별도로 처리할 필요없이 `try-with-resource`를 사용하면 된다
+
+AutoCloseable을 구현한 클래스는 다음과 같다
+
+- java.nio.channels.FileLock
+- java.beans.XMLEncoder
+- java.beans.XMLDecoder
+- java.io.ObjectInput
+- java.io.ObjectOutput
+- java.util.Scanner
+- java.sql.Connection
+- java.sql.ResultSet
+- java.sql.Statement
+
+```java
+try ( Scanner scanner = new Scanner(new File(fileName, encoding));
+      Scanner scanner = new Scanner(System.in) ) {
+     System.out.println(scanner.nextLine());
+} catch (IllegalArgimentException | FileNotFoundException | NullPointerException e) {
+     e.printStackTrace();
+} finally {
+     if(scanner != null) {
+          scanner.close();
+     }
+}
+```
+
+try 안의 소괄호에서 `;`를 이용해서 여러개를 충분히 사용할 수 있다
+
 
 3. `<>` 을 활용한 타입 추론
 
