[JSP] Statement와 PrepareStatement 수정

--- a/Redis/01. Introduction.md
+++ b/Redis/01. Introduction.md
@@ -6,7 +6,9 @@
 
 레디스는 스트링, 해쉬, 리스트, 셋, 범위쿼리가 있는 정렬된 셋, 비트맵, 하이퍼로그, 지리공간의 인덱스들과 스트림들을 제공한다
 
-레디스는 기본 제공 복제, Lua 스크립팅, LRU 제거, 트랜잭션 및 다양한 수준의 온디스크 지속성을 갖추고 있으며 Redis Sentinel을 통한 고가용성 및 Redis 클러스터를 통한 자동 파티셔닝을 제공합니다
+레디스는 기본 제공으로 복제, Lua 스크립팅, LRU 제거, 트랜잭션 및 다양한 수준의 온디스크 지속성을 갖추고 있으며 
+
+Redis Sentinel을 통한 고가용성 및 Redis 클러스터를 통한 자동 파티셔닝을 제공합니다
 
 레디스는 문자열에 추가하는 것과 같이 이러한 유형에 대해 Atomic하게 사용할 수 있다
 
