--- a/Java/Basic/17. Collection.md
+++ b/Java/Basic/17. Collection.md
@@ -31,31 +31,46 @@ Collection 인터페이스에서 구현된 메소드들은 다음과 같다.
 
 ## Set
 
-순서에 상관없고 중복이 있다면 중복된 데이터는 없애는 인터페이스
+순서에 상관없고 중복된 데이터는 없애는 인터페이스
 
 어떤 데이터가 존재하는지 확인하기 위한 목적
 
-- HashSet : 순서가 전혀 필요 없는 데이터를 해시 테이블에 저장한다.
-- LinkedHashSet : 연결된 목록 타입으로 구현된 해시 테이블에 데이터를 저장한다.
-- TreeSet : red-black 트리 타입으로 값이 저장되며, 저장된 데이터의 값에 따라서 정렬되는 Set
+시간 복잡도 : O(1)
 
-### LinkedList
+1. HashSet
+  - 순서가 전혀 필요 없는 데이터를 해시 테이블에 저장한다.
+2. LinkedHashSet
+  - 연결된 목록 타입으로 구현된 해시 테이블에 데이터를 저장한다. 저장된 순서에 따라 값이 정렬된다.
+3. TreeSet
+  - red-black 트리 타입으로 값이 저장되며, 저장된 데이터의 값에 따라서 정렬되는 Set
+4. SortedSet
 
-- List, Queue, Deque 인터페이스를 구현한다.
+## List
 
-### Queue
+순서를 보장하고 중복을 허용하는 같은 종류의 아이템을 저장하는 인터페이스
 
-- FIFO 기능을 구현할 때 사용되는 클래스
+시간 복잡도 : O(n)
 
-### DeQueue
+1. ArrayList
+  - 할당량 초과 시, 기존 데이터를 복사 후 capacity 설정에 따른 데이터를 추가하며 중간 삽입/삭제 시 많은 연산량을 요구한다
 
-- Queue의 기능을 확장, 맨 앞과 맨 뒤의 데이터를 삽입하거나 제거하는데 용이
+2. LinkedList
+  - List, Queue, Deque 인터페이스를 구현한다
+  - Node 라는 저장 데이터 구조를 사용
+  - Node 에 다음 노드의 주소값을 가지고 있어서 순차접근을 통해서만 데이터를 찾을 수 있지만, 이 주소값으로 인해 중간 삽입/삭제가 유리하다
 
-### Stack
+  #### Queue
+    - FIFO 기능을 구현할 때 사용되는 클래스
+  #### DeQueue
+    - Queue의 기능을 확장, 맨 앞과 맨 뒤의 데이터를 삽입하거나 제거하는데 용이
+  #### Stack
+    - List 인터페이스를 구현하였고 LIFO 기능을 구현할 때 사용되는 클래스
 
-- List 인터페이스를 구현하였고 LIFO 기능을 구현할 때 사용되는 클래스
+각 컬렉션의 기능에 대해선 별도의 파일로 자세하게 작성할 예정이다. 
 
+## 결과
 
+본인이 구현하려는 기능을 만들 때, 아주 잘 맞는 컬렉션을 잘 알고 선택하는 것은 매우 중요하다
 
 ------
 
