[JAVA] 람다, 스트림, DateTime 에 대해서 추가

--- a/Java/Basic/21. Java-change.md
+++ b/Java/Basic/21. Java-change.md
@@ -98,9 +98,75 @@ switch (text) {
 
 1. 람다 표현식 추가
 
+익명 클래스의 단점을 보완하기 위해 람다 표현식이 만들어짐
+
+인터페이스에 메소드가 "하나"인 것들만 적용가능하다
+
+- java.lang.Runnable
+- java.util.Comparator
+- java.io.FileFilter
+- java.util.concurrent.Callable
+- java.securiry.PrivilegedAction
+- java.nio.file.Path.Matcher
+- java.lang.reflect.InvocationHandler 등등이 있다
+
 2. 스트림 추가
 
-3. 타임 패키지 추가 (java.time), `new Date()` 와 `new Time()`
+```java
+list.stream().filter(x -> x > 10).count()
+//   -------- ------------------- -------
+//   생성      중개 연산           종단 연산
+```
+
+- 스트림 생성 : 컬렌션의 목록을 스트림 객체로 변환
+- 중개 연산 : 생성된 스트림 객체를 사용하여 중개 연산 부분에서 처리한다. 결과를 리턴하지 않는다
+- 종단 연산 : 중개 연산에서 작업된 내용을 바탕으로 결과를 리턴한다
+
+3. 타임 패키지 추가 (java.time)
+
+- 값 유지
+
+|   버전 |        패키지       |              설명                         |
+|--------|--------------------|-------------------------------------------|
+| 예전   | java.util.Date     | 날짜 계산을 할 수 없다.                     |
+|        | java.util.Calendar | 불변 객체가 아니므로 연산시 객체 자체가 변경 |
+
+|   버전 |        패키지             |                   설명                  |
+|--------|--------------------------|-----------------------------------------|
+| Java 8 | java.time.ZonedDateTime  | 불변 객체로 연산이 가능하며 결과도 불변이다 |
+|        | java.util.LocalDate      |                                         |
+
+- 변경
+
+|   버전 |        패키지       | 설명 |
+|--------|----------------------------|------|
+| 예전   | java.text.SimpleDateFormat | 스레드에 안전하지 않다 |
+
+|   버전 |        패키지                       |      설명    |
+|--------|------------------------------------|--------------|
+| Java8 | java.text.format.DateTimeFormatter | 스레드에 안전 |
+
+- 시간대
+
+|   버전 |        패키지               |                 설명                 |
+|--------|----------------------------|--------------------------------------|
+| 예전   |      java.util.TimeZone    | Asia/Seoul 이나 +09:00 같은 정보를 가짐 |
+
+|  버전  |        패키지                       |      설명    |
+|--------|------------------------------------|--------------|
+| Java8  | java.time.ZoneId, ZoneOffset | ZoneId는 Asia/Seoul, ZoneOffset 은 +09:00 같은 정보를 가짐 |
+
+- 속성 관련
+
+|   버전 |        패키지               |                 설명                 |
+|--------|----------------------------|--------------------------------------|
+| 예전   |      java.util.Calendar    | Calendar.YEAR, MONTH, DATE 는 정수이다 |
+
+|   버전 |               패키지                       |      설명    |
+|--------|-------------------------------------------|--------------|
+| Java8 | java.time.temporal.ChronoField, ChronoUnit | ChronoField.YEAR, MONTH_OF_YEAR, DAY_OF_MONTH, ChronoUnit.YEARS(연), MONTHS(개월), DAYS(일) 등 enum 타입 |
+
+윤달
 
 4. 인터페이스의 디폴트와 스태틱 메소드 추가
 
