[CS] 스레드에 대해

--- a/Java/Basic/19. Thread.md
+++ b/Java/Basic/19. Thread.md
@@ -1,33 +1,33 @@
 # Thread
 
-자바 프로그램 하나를 실행하면 하나의 프로세스가 추가되고, 그 프로세스 안에 쓰레드가 수행된다.
+자바 프로그램 하나를 실행하면 하나의 프로세스가 추가되고, 그 프로세스 안에 스레드가 수행된다.
 
 스레드에서 수행되는 변수의 값을 참조할 땐, 메인메모리가 아닌 CPU의 캐시에 할당된다
 
-## 프로세스와 쓰레드
+## 프로세스와 스레드
 
 프로세스는 실행 중인 프로그램, 운영체제로부터 자원을 할당받는 작업 단위
 
-쓰레드는 프로세스 안에서 실제로 작업을 수행하는 주체, 프로세스가 할당받은 자원을 이용하는 실행단위
+스레드는 프로세스 안에서 실제로 작업을 수행하는 주체, 프로세스가 할당받은 자원을 이용하는 실행단위
 
 ## 스레드를 생성하는 방법
 
-Runnable 인터페이스나 Thread 클래스를 직/간접적으로 구현한 클래스만 쓰레드로 처리될 수 있다.
+Runnable 인터페이스나 Thread 클래스를 직/간접적으로 구현한 클래스만 스레드로 처리될 수 있다.
 
 - Runnable 인터페이스를 구현하여 사용
 - Thread 클래스를 확장하여 사용
 
 선언 시에는 `public void run()` 메소드를 꼭 선언해야 한다.
 
-쓰레드를 시작하려면 쓰레드 객체의 `start()` 메소드를 호출하면 선언되어 있는 `run()` 메소드가 실행된다.
+스레드를 시작하려면 스레드 객체의 `start()` 메소드를 호출하면 선언되어 있는 `run()` 메소드가 실행된다.
 
-쓰레드는 `run()` 메소드가 종료되면 끝난다.
+스레드는 `run()` 메소드가 종료되면 끝난다.
 
-쓰레드를 실행한 메소드에서 쓰레드가 종료될 까지 대기하려면, `join()` 메소드를 사용되면 된다.
+스레드를 실행한 메소드에서 스레드가 종료될 까지 대기하려면, `join()` 메소드를 사용되면 된다.
 
-Object 클래스에 선언된 `wait()` 메소드를 호출하면 쓰레드는 대기 상태가 되며, `notify()` 나 `norifyAll()` 메소드를 호출하면 깨어나게 된다.
+Object 클래스에 선언된 `wait()` 메소드를 호출하면 스레드는 대기 상태가 되며, `notify()` 나 `norifyAll()` 메소드를 호출하면 깨어나게 된다.
 
-수행 중인 쓰레드를 종료시키려면 `interrupt()` 메소드를 호출된다.
+수행 중인 스레드를 종료시키려면 `interrupt()` 메소드를 호출된다.
 
 ## Runnable
 
@@ -74,42 +74,42 @@ This is Thread's run() method.
 RunThreads.runBasic() method is ended.
 ```
 
-쓰레드가 여러개가 존재하면 그 종료 순서는 실행마다 보장할 수 없다고 한다.
+스레드가 여러개가 존재하면 그 종료 순서는 실행마다 보장할 수 없다고 한다.
 
 
-## 쓰레드의 상태
+## 스레드의 상태
 
 | 상태          |                  의미                                       |
 |---------------|------------------------------------------------------------|
-| NEW           | 쓰레드 객체는 생성되었지만, 아직 시작되지는 않은 상태          |
-| RUNNABLE      | 쓰레드가 실행중인 상태                                       |
-| BLOCKED      | 쓰레드가 실행 중지 상태이며, 모니터락이 풀리기를 기다리는 상태  |
-| WAITING       | 쓰레드가 대기중인 상태                                       |
-| TIMED_WAITING | 특정 시간만큼 쓰레드가 대기중인 상태                          |
-| TERMINATED    | 쓰레드가 종료된 상태                                         |
+| NEW           | 스레드 객체는 생성되었지만, 아직 시작되지는 않은 상태          |
+| RUNNABLE      | 스레드가 실행중인 상태                                       |
+| BLOCKED      | 스레드가 실행 중지 상태이며, 모니터락이 풀리기를 기다리는 상태  |
+| WAITING       | 스레드가 대기중인 상태                                       |
+| TIMED_WAITING | 특정 시간만큼 스레드가 대기중인 상태                          |
+| TERMINATED    | 스레드가 종료된 상태                                         |
 
 
-## 데몬 쓰레드
+## 데몬 스레드
 
 프로세스가 중간에 종료될 때,
 
-데몬 쓰레드가 종료되지 않아도 실행 중인 일반 쓰레드가 없다면 종료한다.
+데몬 스레드가 종료되지 않아도 실행 중인 일반 스레드가 없다면 종료한다.
 
 ## synchronized 관하여
 
-하나의 객체를 공유하는 많은 쓰레드가 동시에 synchronized 메소드에 접근한다고 하더라도 하나의 쓰레드만 해당 메소드를 수행한다.
+하나의 객체를 공유하는 많은 스레드가 동시에 synchronized 메소드에 접근한다고 하더라도 하나의 스레드만 해당 메소드를 수행한다.
 
-다른 쓰레드는 멈추게 되고 흔히 작성하던 방식으로의 데이터가 원하는대로 출력된다.
+다른 스레드는 멈추게 되고 흔히 작성하던 방식으로의 데이터가 원하는대로 출력된다.
 
 그렇다고 모든 곳에 synchronized를 쓰지말자
 
 ### synchronized를 사용해야 할 때
 
-여러 쓰레드에서 인스턴스 변수를 동시에 접근할 일이 있는 경우에만 써야하고,
+여러 스레드에서 인스턴스 변수를 동시에 접근할 일이 있는 경우에만 써야하고,
 
 다른 스레드에서 공유할 이유가 없다면 sychronized를 사용할 이유가 없으므로 사용하지 않도록한다. 
 
-여러 쓰레드에서 동시에 접근할 일이 있는 경우에 써야한다.
+여러 스레드에서 동시에 접근할 일이 있는 경우에 써야한다.
 
 1. 메소드 자체에 synchronized 를 선언하여 사용할 수 있다.
 
@@ -125,8 +125,8 @@ RunThreads.runBasic() method is ended.
 
 ## 메소드
 
-join() : 쓰레드가 종료될 때까지 기다린다
+join() : 스레드가 종료될 때까지 기다린다
 
-interrupt() : 쓰레드를 종료시키고 sleep(), join(), wait() 메소드가 호출되어 대기 중인 상태에만 interrupt()메소드가 처리된다.
+interrupt() : 스레드를 종료시키고 sleep(), join(), wait() 메소드가 호출되어 대기 중인 상태에만 interrupt()메소드가 처리된다.
 
-## 쓰레드 그룹
+## 스레드 그룹
