[Java] 다형성 추가

--- a/Java/Basic/00. OOP.md
+++ b/Java/Basic/00. OOP.md
@@ -44,6 +44,14 @@ Animal penguin = new Penguin();
 
 ## 다형성 : 사용편의성
 
+<img src="https://github.com/Geol2/Today-I-Learned/blob/main/Java/images/polymorphism-1.png" />
+
+비유로는 운전자 - 자동차, 공연 무대, 키보드/마우스 세상의 표준 인터페이스, 할인 정책 로직
+
+배역만 만들어두면 배우는 언제든지 변경가능하게 만드는 것이 좋다
+
+역할과 구현을 분리한다
+
 오버라이딩과 오버로딩이 있다
 
 - 오버라이딩 : 상위 클래스의 메소드를 재정의
