--- a/Java/Spring/00. [수정예정] SpringBoot.md
+++ b/Java/Spring/00. [수정예정] SpringBoot.md
@@ -1,3 +1,37 @@
+# 스프링부트
+
+스프링을 편리하게 사용할 수 있도록 지원
+
+별도 Tocat과 같은 웹 서버를 내장되어 별도 설치가 필요없이 편리함
+
+서드파티 라이브러리 자동 구성
+
+# 스프링 단어?
+
+3가지의 의미
+
+- 스프링 DI 컨테이너 기술
+- 스프링 프레임 워크
+- 스프링 부트, 스프링 프레임워크 등을 모두 포함한 스프링 생태계
+
+## 이 기술을 왜 만들었을까? 핵심 컨셉은?
+
+스프링은 객체 지향 언어가 가진 강력한 특징을 살려내는 프레임워크
+
+좋은 객체 지향 애플리케이션을 개발할 수 있게 도와주는 프레임워크
+
+# 좋은 객체 지향 프로그래밍
+
+- 객체들의 모임
+
+- 유연하고 변경 용이한데, 레고 블럭 조립이나 부품을 갈아끼우듯이!
+
+
+
+
+
+----------------------------
+
 # @MVC
 
 ## 기능
