[Java] 팩토리메소드 추가

--- a/Java/Basic/00. OOP.md
+++ b/Java/Basic/00. OOP.md
@@ -11,7 +11,7 @@
 
 ## 상속 : 재사용 및 확장 (a kind of)
 
-<img src="https://github.com/Geol2/Today-I-Learned/blob/main/Java/images/extends-2.png" />
+<img src="https://github.com/Geol2/Today-I-Learned/blob/main/Java/images/extends-2.png?raw=true" />
 
 객체 지향에서의 상속에서 흔히 부모-자식 관계에 대해 설명해주지만, 이런 개념보단 확장의 개념으로 동물-포유류-고래 순으로 집합 관계로 보는 것이 좋다
 
@@ -25,7 +25,7 @@ Animal penguin = new Penguin();
 
 ### 인터페이스 (be able to : 할 수 있는)
 
-<img src="https://github.com/Geol2/Today-I-Learned/blob/main/Java/images/extends-3.png" />
+<img src="https://github.com/Geol2/Today-I-Learned/blob/main/Java/images/extends-3.png?raw=true" />
 
 무엇을 할 수 있는~ 형태로 만드는 것이 좋다
 
@@ -44,7 +44,7 @@ Animal penguin = new Penguin();
 
 ## 다형성 : 사용편의성
 
-<img src="https://github.com/Geol2/Today-I-Learned/blob/main/Java/images/polymorphism-1.png" />
+<img src="https://github.com/Geol2/Today-I-Learned/blob/main/Java/images/polymorphism-1.png?raw=true" />
 
 비유로는 운전자 - 자동차, 공연 무대, 키보드/마우스 세상의 표준 인터페이스, 할인 정책 로직
 
