[Java] 필터, 런타임 영역 수정

--- a/Java/Expert/02. Runtime-Area.md
+++ b/Java/Expert/02. Runtime-Area.md
@@ -9,18 +9,40 @@
 
 그 중, Method Area 내부에는 Constant Pool이라는 것이 존재한다.
 
-메소드, 스택, 힙 영역은 실제로 많이 사용되고 다루게 되는 주제라서 이 부분에 대해 잘 파악하면 좋을 것 같다.
+메소드, 스택, 힙 영역은 T 메모리 모델이라고 불리기도 하며 개발자로서 실제로 많이 다루게 되는 주제라서 잘 파악하면 좋을 것 같다.
 
 ## 메소드 영역 (= 데이터, 클래스, 스태틱 영역)
 
 다양한 자료들에서 메소드 영역이라는 이름이 다양하게 쓰이는데 편하게 메소드 영역이라고 불리는 것이 좋을 것 같다. 주로 static 키워드가 포함된 변수나 함수들이 해당 영역에 할당된다.
 
+- main 메소드가 실행 되기 전에 java.lang 패키지를 적재한다
+- import된 패키지를 스태틱 영역에 적재한다
+- 모든 클래스를 스태틱 영역에 적재한다
+
 ## 스택 영역
 
-한 스택에 대해 스택 프레임이라고 불리는 것 같고, 스택 프레임 내부에는 매개변수나 지역 변수들이 존재한다고 한다. 메소드 호출이 일어날 떄마다 스택 프레임이 생성된다.
+메소드 스택 프레임
+- 메소드가 호출될 때마다 스택 안에 한 개의 스택 프레임이 쌓이게 되는데, 스택 프레임 안에는 각 변수들의 정보가 들어있다
+- 메소드 스택 프레임끼리의 데이터 정보는 마음대로 접근할 수 없다
+
+블록 스택 프레임
+- 한 함수 안에서 여러 조건문이나 반복문을 실행하게 되는데, 이 때 블록 스택 프레임이라는 것이 생기게 된다. 조건문이나 반복문이 종료가 되면 블록 스택 프레임이 없어진다
+- 블록 스택 프레임 안에 할당된 지역 변수는 블록 밖에서 공유되지 않는 점이 있어서 조심히 사용해야 한다, 하지만 블록 밖에서 선언된 변수는 블록 안에서 얼마든지 공유하고 데이터를 변경할 수 있다
+
+멀티 스레드
+- 스택 영역을 스레드 개수만큼 분할해서 쓰는 것
+- 스택 영역을 분할해서 사용하므로 스태틱 영역과 힙 영역은 공유된다
+
+멀티 프로세스
+- 다수의 T 메모리를 갖는 구조
+- 별도의 T 메모리 모델을 가지고 있으며 하나의 프로세스와 다른 프로세스는 공유되지 않는다
 
 ## 힙 영역
 
 `new` 를 통해서 만들어진 객체가 저장되는 영역이다. GC에 의해 처리되는 영역이다.
 
 `Person p1 = new Person("geol")` 에서 `p1`은 스택영역이며 `new Person("geol")`은 힙 영역으로 보면 될 것 같다.
+
+---
+
+객체지향적 사고도 중요하지만, 절차지향적 사고 또한 굉장히 중요하다. (계승적 관계)
