[JAVA] 상속과 캐스팅 보충 공부

--- a/Java/Basic/09. Extends.md
+++ b/Java/Basic/09. Extends.md
@@ -20,15 +20,17 @@
 
 ## 메소드 오버라이딩
 
-자식 클래스에서 부모 클래스의 메소드의 이름을 동일하게 선언
+자식 클래스에서 부모 클래스의 메소드의 이름을 동일하게 선언하는 방법
 
 접근 제어자, 리턴 타입, 메소드 이름, 매개 변수 타입 및 개수가 모두 동일해야함
+
+*오버로딩* 이 무엇일까? - 클래스 내부에서 같은 이름의 메소드를 다양한 파라미터로 정의할 수 있게 하는 기능
 
 ## 다형성
 
 형변환을 하더라도 원래 객체의 메서드를 실행함
 
-부모 타입의 변수는 자식 타입의 변수에 할당하거나 자식 타입의 객체를 생성할 수 있다는 것
+부모 참조 자료형의 변수는 자식 참조 자료형의 변수에 할당하거나 자식 참조 자료형의 객체를 생성할 수 있다는 것
 
 ## 실습 작성
 ```java
@@ -153,6 +155,84 @@ Dog Constructor
 dog gray wolf 4 60 false
 ```
 
-- `javac Animal.java Dog.java Cat.java Main.java`
+## Extends Deep Dive !
 
-- `java Main.java`
+```java
+
+class Animal {
+  public String name;
+
+  public Animal() {
+    System.out.println("Animal 생성자");
+  }
+
+  public void showName() {
+    System.out.println("안녕 나는 " + this.name + "이야");
+  }
+}
+
+class Penguin extends Animal {
+  public String habitat;
+
+  public Penguin() {
+    System.out.println("Penguin 생성자");
+  }
+
+  public void showHabitat() {
+    System.out.println("나는 " + habitat + "에서 살아");
+  }
+}
+
+public class Main {
+  public static void main(String[] args) {
+    Penguin pororo = new Penguin(); // 1
+    pororo.name = "뽀로로";
+    pororo.habitat = "EBS";
+    pororo.showName();
+    pororo.showHabitat();
+
+    Animal pingu = new Penguin(); // 2
+    pingu.name = "핑구";
+    //pingu.habitat = "남극";
+    pingu.showName();
+    //pingu.showHabitat();
+
+    // Penguin pingu2 = new Animal(); // 3
+  }
+}
+
+/** 결과
+ * Animal 생성자
+ * Penguin 생성자
+ * 안녕 나는 뽀로로이야
+ * 나는 EBS에서 살아
+ * Animal 생성자
+ * Penguin 생성자
+ * 안녕 나는 핑구이야
+ */
+```
+
+위 코드를 보면, Penguin 클래스는 Animal 클래스를 상속하고 있다
+
+- Penguin 클래스는 자식, 하위
+- Animal 클래스는 부모, 상위
+
+main 메소드 안에서 
+
+1번, 2번의 출력 결과로 힙 영역에 Penguin 객체를 생성하였지만, Animal 객체도 같이 생성됨은 물론 Object 객체도 생성된다. 이것은 아래 질문에 대해 답을 해주고 있다고 생각했다
+
+다른 점은 *어떤 참조 자료형 변수에 어떤 객체를 할당할까?* 라는 것이 차이라고 생각했다
+
+1번 : `Penguin pororo = new Penguin();`
+- Penguin, Animal 속성과 행위를 사용할 수 있다
+- 상속 간에 관계를 표현했을 때, 자식 객체는 부모의 속성과 행위를 포함할 수 있다
+
+2번 : `Animal pingu = new Penguin();`
+- 부모 참조 자료형은 자식 객체 생성을 할 수 있지만 자식의 속성과 행위를 사용할 수 없다
+- Animal 속성과 행위만 사용할 수 있다
+
+왜 3번은 사용할 수 없을지에 대한 고민을 해보았다
+- 자식 참조 자료형 변수에 부모 객체를 할당할 때, 부모는 자식의 속성과 행위를 가질 수 없으므로 안된다는 생각을 해보았다, 굳이 하려면 명시적 형변환이 필요하다
+
+### Point!
+자식은 부모의 속성과 행위를 물려받기 때문에 부모처럼 취급될 수 있다라는 사실이 중요한 것 같다
