--- a/Java/Expert/01. JVM.md
+++ b/Java/Expert/01. JVM.md
@@ -77,16 +77,13 @@ Person p = new Person("geol", 29);
 로드된 클래스 파일의 바이트코드를 실행하는 엔진
 
 1. Interpreter
-
-한줄한줄 씩 변경함
+    - 한줄한줄 씩 변경함
 
 2. JIT Compiler
-
-런타임일 때, 한꺼번에 변경함
+    - 런타임일 때, 한꺼번에 변경함
 
 3. GC Collector
-
-바이트코드를 실행시키기 위해서는 기계어로 바꾸는 작업이 필요한데 엔진 내부의 Interpreter, JIT Compiler가 해당 기계어로 바꾸는 작업을 수행한다.
+    - 바이트코드를 실행시키기 위해서는 기계어로 바꾸는 작업이 필요한데 엔진 내부의 Interpreter, JIT Compiler가 해당 기계어로 바꾸는 작업을 수행한다.
 
 
 | Source Code (.java) &rightarrow; Byte Code (.class) &rightarrow; class Loader &rightarrow; Runtime Data Area &rightarrow; Execution Engine &leftrightarrow; Native Method Interface &leftrightarrow; Native Method Library |
