--- a/Java/Expert/02. Runtime-Area.md
+++ b/Java/Expert/02. Runtime-Area.md
@@ -39,9 +39,15 @@
 
 ## 힙 영역
 
-`new` 를 통해서 만들어진 객체가 저장되는 영역이다. GC에 의해 처리되는 영역이다.
+`new` 키워드를 통해서 만들어진 객체가 저장되고 GC가 일어나는 영역이다.
 
-`Person p1 = new Person("geol")` 에서 `p1`은 스택영역이며 `new Person("geol")`은 힙 영역으로 보면 될 것 같다.
+예를 들어 `Person`, `Soiler` 라는 클래스를 두고 `Soilder` 는 `Person` 을 상속하고 있다고 생각해보았다.
+
+`Person p1 = new Person("geol")` 에서 `p1`은 스택 영역에 할당되고 `Person`, `Object` 객체는 힙 영역에 만들어진다
+
+`Person p2 = new Soilder("jack")` 은 힙 영역에 `Soilder`, `Person`, `Object` 객체가 만들어진다. 
+
+`Soilder p3 = new Person("jill")`은 명시적 형변환을 하지 않는 이상 불가능할 것이다. Person, Object 객체가 생성되었지만, Soilder 객체는 사용할 수 없으므로 암묵적 형변환이 불가능하다. 명시적 변환 시, 
 
 ---
 
