[SQL] 인덱스, 뷰, 테스트 데이터 추가

--- a/Database/계층형질의문.md
+++ b/Database/계층형질의문.md
@@ -8,3 +8,78 @@ FROM emp
 START WITH ename = 'KING'
 CONNECT BY PRIOR empno = mgt AND ename = 'BLAKE' IN ('SCOTT', 'FORD');
 ```
+
+## ORDER SIBLINGS BY
+```sql
+/* 서열 순서를 유지한 상태에서 월급이 높은 순서대로 출력 */
+SELECT rpad(' ', level*3) || ename AS employee, level, sal job
+FROM emp
+START WITH ename = 'KING'
+CONNECT BY PRIOR empno = mgr
+ORDER SIBLINGS BY sal DESC;
+```
+
+```sql
+/* BLAKE와 BLAKE 팀원들만 출력하는데 서열을 유지한 상태에서 월급이 낮은 사원부터 출력 */
+SELECT rpad(' ', level*3) || ename AS employee, level, sal job
+FROM emp
+START WITH ename = 'BLAKE'
+CONNECT BY PRIOR empno = mgr
+ORDER SIBLINGS BY sal DESC; /* SIBLINGS 필수 */
+```
+
+## sys_connect_by_path
+```sql
+/* 자기의 서열순서가 어떻게 되는지 출력 */
+SELECT ename, sys_connect_by_path(ename, '/') AS path
+from emp
+start with ename='KING'
+CONNECT BY PRIOR empno = mgr;
+
+/* 위에서 월급도 같이 출력 */
+SELECT ename || '(' || sal || ')', 
+        sys_connect_by_path(ename || '(' || sal || ')', '/') AS path
+from emp
+start with ename='KING'
+CONNECT BY PRIOR empno = mgr;
+```
+
+## ON COMMIT DELETE ROWS, ON COMMIT PRESERVE ROWS
+```sql
+/* DDL - CREATE */
+CREATE TABLE emp93
+( empno number(10),
+  ename varchar2(10),
+  sal number(10, 2), -- 소수점 두자리
+  hiredate date
+);
+
+INSERT INTO emp93 (empno, ename, sal, hiredate)
+VALUES (7788, 'scott', 3000, to_date('01/12/21', 'RR/MM/DD'));
+
+SELECT * FROM emp93;
+
+DROP TABLE emp93;
+```
+
+```sql
+/* 임시 테이블을 만들고 저장하는데 commit 시 데이터를 삭제하게 하기 */
+CREATE GLOBAL TEMPORARY TABLE emp93
+( empno number(10),
+  ename varchar2(10),
+  sal number(10, 2), -- 소수점 두자리
+  hiredate date
+)ON COMMIT DELETE ROWS; -- ON COMMIT PRESERVE ROWS : 세션을 종료하면 데이터를 지움
+
+INSERT INTO emp93 (empno, ename, sal, hiredate)
+VALUES (7788, 'scott', 3000, to_date('01/12/21', 'RR/MM/DD'));
+
+INSERT INTO emp93 (empno, ename, sal, hiredate)
+VALUES (7789, 'scott2', 3001, to_date('02/12/21', 'RR/MM/DD'));
+
+SELECT * FROM emp93;
+
+commit;
+
+SELECT * FROM emp93;
+```
