[SQL] 외부 접속 허용 추가

--- a/Sql/01. MySQL.md
+++ b/Sql/01. MySQL.md
@@ -17,6 +17,15 @@ GRANT ALL PRIVILEGES ON *.* to '계정명'@'%';
 FLUSH PRIVILEGES;
 ```
 
+- 내부 접속 허용 방법
+```sql
+CREATE USER '계정명'@'localhost' identified by '패스워드';
+GRANT ALL PRIVILEGES ON *.* to '계정명'@'localhost';
+FLUSH PRIVILEGES;
+```
+
+`%` 와 `localhost` 차이를 잘 기억해두면 될 듯 하다
+
 ## 사용자 식별
 
 - `'svc_id'@'192.168.0.10' (123)` 은 로컬호스트에서 svc_id라는 아이디로만 접속이 가능하다.
